--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -123,8 +123,9 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Russian: {{t+|ru|красивый|tr=krasívyj}}, {{t+|ru|прекрасный|tr=prekrásnyj}}
 * Scottish Gaelic: [[àlainn]], [[bòidheach]], [[brèagha]], [[fèilleil]], [[grinn]], [[maiseach]], [[rìomhach]], [[sgèimheach]]
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|леп}}
-* Sinhalese: {{t|si|ලස්සන|tr=lassanna|sc=Sinh}}, {{t|si|ලස්සන|tr=lassənə|sc=Sinh}}, {{t|si|සුන්දර|tr=sundərə|sc=Sinh}}
+*: Cyrillic: {{t|sh|леп}}, {{t|sh|лијеп}}
+*: Roman: {{t|sh|lep}}, {{t|sh|lijep}}
+* Sinhalese: {{t|si|ලස්සන|tr=lassənə|sc=Sinh}}, {{t|si|සුන්දර|tr=sundərə|sc=Sinh}}
 * Slovak: {{t-|sk|krásny}}, {{t|sk|pekný}}
 * Slovene: {{t+|sl|lep}}
 * Sorbian:
