--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -318,6 +318,7 @@ From {{etyl|enm}}, from {{etyl|xno}} {{term|cachier||lang=xno}}, from {{etyl|LL.
 *: Gallurese Sardinian: {{tø|sdn|aggantà }}
 *: Logudorese Sardinian: {{tø|src|aggarrare }}
 {{trans-mid}}
+* Sassarese Sardinian: {{tø|sdc|agguantà }}
 * Scottish Gaelic: {{t|gd|glac}}
 {{trans-bottom}}
 
