--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -101,6 +101,7 @@ From {{etyl|enm}}, from {{etyl|xno}} {{term|cachier||lang=xno}}, from {{etyl|LL.
 * Kurdish:
 *: Sorani: {{ku-Arab|[[گرتن]]}}
 * Portuguese: {{t|pt|pegar}}
+* Russian: {{t|ru|поимка|f|sc=Cyrl|tr=poímka|alt=пои́мка}}, {{t|ru|захват|m|sc=Cyrl|tr=zaxvát|alt=захва́т}}
 * Swahili: {{t+|sw|daka|xs=Swahili}}
 * Swedish: {{t|sv|fångst|c}}
 {{trans-bottom}}
@@ -131,7 +132,7 @@ From {{etyl|enm}}, from {{etyl|xno}} {{term|cachier||lang=xno}}, from {{etyl|LL.
 {{trans-mid}}
 * Hungarian: {{t|hu|bökkenő}}
 * Italian: {{t-|it|trappola}}
-* Russian: {{t|ru|подвох|sc=Cyrl}}
+* Russian: {{t|ru|подвох|sc=Cyrl|tr=podvóx|alt=подво́х}}
 * Swedish: {{t+|sv|hake|c}}
 {{trans-bottom}}
 
@@ -143,6 +144,7 @@ From {{etyl|enm}}, from {{etyl|xno}} {{term|cachier||lang=xno}}, from {{etyl|LL.
 {{trans-mid}}
 * Italian: {{t|it|bottino|m}}
 * Japanese: {{t|ja|捕る|tr=toru}}
+* Russian: {{t|ru|улов|m|sc=Cyrl|tr=ulóv|alt=уло́в}}, {{t|ru|добыча|f|sc=Cyrl|tr=dobýča|alt=добы́ча}}
 * Swedish: {{t|sv|fångst|c}}
 {{trans-bottom}}
 
