--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -315,7 +315,7 @@ From {{etyl|enm}}, from {{etyl|xno}} {{term|cachier||lang=xno}}, from {{etyl|LL.
 * {{trreq|Georgian}}
 * Italian: {{t|it|agguantare}}
 * Polish: [[łapać]] / [[złapać]]
-* Russian: {{t+|ru|ловить|tr=lovít'}} {{impf}}б {{t|ru|поймать|tr=pojmát'}} {{pf}}
+* Russian: {{t+|ru|ловить|tr=lovít'}} {{impf}}, {{t|ru|поймать|tr=pojmát'}} {{pf}}
 * Sardinian:
 *: Campidanese Sardinian: {{tø|sro|aggaffài}}
 *: Gallurese Sardinian: {{tø|sdn|aggantà }}
@@ -349,7 +349,7 @@ From {{etyl|enm}}, from {{etyl|xno}} {{term|cachier||lang=xno}}, from {{etyl|LL.
 * Luxembourgish: {{t|lb|fänken}}
 * Persian: {{t+|fa|گرفتن|tr=geraftan|xs=Persian}}
 * Romanian: {{t+|ro|prinde}}
-* Russian: {{t+|ru|ловить|tr=lovít'}} {{impf}}б {{t|ru|поймать|tr=pojmát'}} {{pf}}
+* Russian: {{t+|ru|ловить|tr=lovít'}} {{impf}}, {{t|ru|поймать|tr=pojmát'}} {{pf}}
 * Slovene: [[ujeti]]
 * Spanish: [[atajar]] {{qualifier|Latin America}}, [[cazar]] {{qualifier|football}}
 * Swedish: {{t|sv|fånga}}, {{t|sv|fatta}} {{qualifier|dated}}
