--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -121,6 +121,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Punjabi: [[ਸੁਹਣਾ]] (suhṇā) {{m}}, [[ਸੁਹਣੀ]] (suhṇī) {{f}}
 * Romanian: {{t+|ro|frumos|m|n}}, {{t-|ro|frumoasă|f}}
 * Russian: {{t+|ru|красивый|tr=krasívyj}}, {{t+|ru|прекрасный|tr=prekrásnyj}}
+* Sanskrit: {{t|sa|सुन्दर|tr=sundara|sc=Deva}}
 * Scottish Gaelic: [[àlainn]], [[bòidheach]], [[brèagha]], [[fèilleil]], [[grinn]], [[maiseach]], [[rìomhach]], [[sgèimheach]]
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|леп}}, {{t|sh|лијеп}}
