--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -28,6 +28,8 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 #: ''You should slow down when approaching a '''curve'''.''
 # A simple figure containing no [[straight]] portions and no [[angle]]s; a [[curved]] [[line]].
 #: ''She scribbled a '''curve''' on the paper.''
+# A grading system based on the scale of performance of a group used to [[normalize]] a right-[[skewed]] grade distribution (with more lower scores) into a [[bell curve]], so that more can receive higher grades, regardless of their actual knowledge of the subject.
+#: ''The teacher was nice and graded the test on a '''curve'''''
 # {{analytic geometry}} A [[continuous map]] from a one-[[dimensional]] [[space]] to a multidimensional space.
 # {{geometry}} A one-dimensional figure of [[non-zero]] length; the [[graph]] of a continuous map from a one-dimensional space.
 # {{algebraic geometry}} An [[algebraic curve]]; a [[polynomial]] [[relation]] of the planar coordinates.
@@ -167,6 +169,8 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 #: ''to '''curve''' a ball in pitching it''
 # {{intransitive}} To bend or turn gradually from a given direction.
 #: ''the road '''curves''' to the right''
+# To grade on a curve ([[bell curve]] of a [[normal distribution]]).
+#: ''The teacher will '''curve''' the test.''
 
 ====Translations====
 
