/* Verb */ Linked to entry <curve#16802057>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -169,7 +169,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 #: ''to '''curve''' a ball in pitching it''
 # {{intransitive}} To bend or turn gradually from a given direction.
 #: ''the road '''curves''' to the right''
-# To grade on a curve ([[bell curve]] of a [[normal distribution]]).
+# To [[grade on a curve]] ([[bell curve]] of a [[normal distribution]]).
 #: ''The teacher will '''curve''' the test.''
 
 ====Translations====
