--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -106,7 +106,7 @@ From {{etyl|enm}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{term|c
 * Portuguese: {{t+|pt|custo|m}}
 * Romanian: {{t-|ro|cost}}, {{t-|ro|preț}}
 * Russian: {{t+|ru|стоимость|f|tr=stóimost'}}, {{t|ru|себестоимость|f|tr=sebestóimost'}}, {{t+|ru|цена|f|tr=tsená}}, {{t|ru|затраты|f|p|tr=zatráty}}, {{t|ru|расходы|m|p|tr=rasxódy}}
-* Scottish Gaelic: {{t-|gd|cosgais|f|xs=Scottish Gaelic}}, {{t-|gd|prìs|f|xs=Scottish Gaelic}}
+* Scottish Gaelic: {{t-|gd|cosgais|f|xs=Scottish Gaelic}}, {{t-|gd|prìs|f|xs=Scottish Gaelic}}, {{t|gd|cosg|m}}
 * Spanish: {{t+|es|costo|m}}
 * Swahili: {{t+|sw|gharama|xs=Swahili}}
 * Swedish: {{t+|sv|kostnad|c}}
@@ -128,7 +128,7 @@ From {{etyl|enm}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{term|c
 * Novial: [[kosto]]
 * Polish: {{t+|pl|cena|f}}
 * Russian: {{t|ru|издержки|f|p|tr=izdéržki}}, {{t|ru|затраты|f|p|tr=zatráty}}, {{t+|ru|цена|f|tr=tsená}}
-* Scottish Gaelic: {{t-|gd|cosgais|f|xs=Scottish Gaelic}}, {{t-|gd|prìs|f|xs=Scottish Gaelic}}
+* Scottish Gaelic: {{t-|gd|cosgais|f|xs=Scottish Gaelic}}, {{t-|gd|prìs|f|xs=Scottish Gaelic}}, {{t|gd|cosg|m}}
 * Spanish: {{t+|es|costo|m}}
 * Swahili: {{t+|sw|gharama|xs=Swahili}}
 * Swedish: {{t+|sv|kostnad|c}}
