t+ca:[[trobar]] ([[WT:EDIT|Assisted]]) <find#16825439>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -52,6 +52,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|lang
 * Azeri: {{t|az|bulmaq}}
 * Basque: {{t|eu|aurkitu|xs=Basque}}, {{t|eu|topatu|xs=Basque}}
 * Breton: {{t+|br|kavout|xs=Breton}}
+* Catalan: {{t|ca|trobar}}
 * Chinese:
 *: Mandarin: {{t|zh|找到|tr=zhǎodào|sc=Hani}}
 * Crimean Tatar: [[tapmaq]]
