t+roa-jer:[[bliond]] t-balance ([[WT:EDIT|Assisted]]) <blond#16829903>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -73,9 +73,10 @@ Alternate etymology connects {{etyl|frk|-}} *''blund'' to {{proto|Germanic|blund
 * Esperanto: {{t-|eo|blonda|xs=Esperanto}}
 * Finnish: {{t+|fi|vaalea}}
 * French: {{t|fr|blond}}
-{{trans-mid}}
 * German: {{t|de|blond}}, {{t|de|hell}}
+{{trans-mid}}
 * Japanese: {{t|ja|金髪|tr=きんぱつの, kinpatsu-no|alt=金髪の|sc=Jpan}}
+* Jèrriais: {{tø|roa-jer|bliond}}
 * Korean: {{t|ko|금발|tr=geumbar-ui|alt=금발의|sc=Kore}}
 * Macedonian: {{t|mk|руса|f|tr=rúsa}}, {{t-|mk|плава|f|tr=pláva}}
 * Russian: {{t+|ru|светлый|tr=svétlyj}}, {{t|ru|русый|tr=rúsyj|sc=Cyrl}}
