/* Irish */ Mutation to L3 <port#16833574>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -386,24 +386,21 @@ From late {{etyl|non|da}} {{term|port|lang=non}}, {{term|portr|lang=non}}, from 
 ==Irish==
 
 ===Noun 1===
-{{head|ga|noun|g=m}}
+{{ga-noun|poirt|poirt|g=m}}
 
 # [[tune]]
-#* ''Is {{l|ga|buaine}} '''port''' ná {{l|ga|glór}} na n-éan; is buaine {{l|ga|focal}} ná {{l|ga|toice}} an t{{l|ga|saoil}}.''
+#* ''Is buaine '''port''' ná glór na n-éan; is buaine focal ná toice an tsaoil.''
 #** A tune is more lasting than the song of birds; a word is more lasting than the wealth of the world.
 # [[jig]] {{qualifier|dance}}
 
 ====Declension====
-{{ga-noun-m1|p|ort|oirt}}
-
-====Mutation====
-{{ga mut cons|p|ort}}
+{{ga-decl-m1|p|ort|oirt}}
 
 ===Noun 2===
-{{head|ga|noun|g=m}}
+{{ga-noun|poirt|poirt|g=m}}
 
 # [[landing]]-place
-# [[harbor]], [[port]]
+# [[harbor]], [[#English|port]]
 # [[bank]] {{qualifier|of river, etc.}}
 # [[mound]], [[embankment]]
 # [[refuge]], [[haven]], [[resort]]
@@ -413,9 +410,9 @@ From late {{etyl|non|da}} {{term|port|lang=non}}, {{term|portr|lang=non}}, from 
 # [[occupied]] place, [[seat]], [[center]]
 
 ====Declension====
-{{ga-noun-m1|p|ort|oirt}}
+{{ga-decl-m1|p|ort|oirt}}
 
-====Mutation====
+===Mutation===
 {{ga mut cons|p|ort}}
 
 [[Category:ga:Dances]]
