--- a/en/昨/昨.16976.wikitext
+++ b/en/昨/昨.16976.wikitext
@@ -1,4 +1,5 @@
 ==Translingual==
+{{stroke order|strokes=9}}
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6801<sub>1</sub>|canj=日人尸 (AOS)|ids=⿰[[日]][[乍]]}}
