--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -40,6 +40,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 *: Old Armenian: {{tø|xcl|ճիւղ|tr=čiwł|sc=Armn|xs=Old Armenian}}, {{tø|xcl|ոստ|tr=ost|sc=Armn|xs=Old Armenian}}, {{tø|xcl|կողր|tr=kołr|sc=Armn|xs=Old Armenian}}
 * Bosnian: {{t-|bs|grana|f}}
 * Bulgarian: {{t+|bg|клон|m}}
+* Catalan: {{t|ca|branca|f}}
 * Chinese:
 *: Mandarin: {{t|zh|支|tr=zhī|sc=Hani}}, {{t|zh|樹枝|sc=Hani}}, {{t|zh|树枝|tr=shùzhī|sc=Hani}}
 * Croatian: {{t-|hr|grana|f}}
@@ -59,8 +60,8 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Japanese: {{t|ja|枝|tr=えだ, eda|sc=Jpan}}
 * Kurdish:
 *: Sorani: {{ku-Arab|[[چرۆ]]}}, {{ku-Arab|[[لق]]}}
-* Latgalian: {{tø|ltg|zors|m}}
 {{trans-mid}}
+* Latgalian: {{tø|ltg|zors|m}}
 * Latin: {{t-|la|ramus|alt=rāmus}}
 * Latvian: {{t-|lv|zars|m|xs=Latvian}}
 * Lithuanian: {{t+|lt|šaka|f|xs=Lithuanian}}
