--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -1,6 +1,6 @@
 {{also|Butter}}
 ==English==
-[[Image:NCI butter.jpg|thumb|right|250 px|Butter (1) [[stick]] with a butter [[knife]].]]
+[[Image:NCI butter.jpg|thumb|right|250 px|Butter {{gloss|food made of cream}} [[stick]] with a butter [[knife]].]]
 {{wikipedia}}
 
 ===Pronunciation===
@@ -15,10 +15,10 @@
 * {{hyphenation|but|ter}}
 
 ===Etymology 1===
-From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{etyl|gmw}} {{term||buterô|butter|lang=gmw}} (compare West Frisian {{term|buter|lang=fy}}, Dutch {{term|boter|lang=nl}}, German {{term|Butter|lang=de}}), from {{etyl|la}} {{term|butyrum|būtȳrum|lang=la}}, from {{etyl|grc}} {{term|sc=polytonic|βούτυρον|βούτῡρον|tr=boútȳron|lang=grc|cow cheese}}, compound of {{term|sc=polytonic|βοῦς|tr=boûs|lang=grc}} 'ox, cow' and {{term|sc=polytonic|τυρός|τῡρός|tr=tyrós|lang=grc}} 'cheese', from Scythian (compare Avestan {{rfscript|Avestan}} ''tūiri'' 'curdled milk, whey'), from {{proto|Indo-European|tuhₓrós}} (compare [[Middle Indic]] ''tūra'' 'cheese', Russian {{term|творог|tr=tvoróg||curds, soft cheese|lang=ru}}, {{etyl|ang|-}} ''þweran'' 'to churn', ''ge-þweor'' 'curds')
+From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{etyl|gmw}} {{term||buterô|butter|lang=gmw}} (compare West Frisian {{term|buter|lang=fy}}, Dutch {{term|boter|lang=nl}}, German {{term|Butter|lang=de}}), from {{etyl|la}} {{term|butyrum|būtȳrum|lang=la}}, from {{etyl|grc}} {{term|sc=polytonic|βούτυρον|βούτῡρον|tr=boútȳron|lang=grc|cow cheese}}, compound of {{term|sc=polytonic|βοῦς|tr=boûs|lang=grc||ox, cow}} and {{term|sc=polytonic|τυρός|τῡρός|tr=tyrós|lang=grc|cheese}}, from Scythian (compare Avestan {{rfscript|Avestan}} {{term|||lang=ae|tr=tūiri|curdled milk, whey}}), from {{proto|Indo-European|tuhₓrós}} (compare [[Middle Indic]] {{term|tūra||cheese}}, Russian {{term|творог|tr=tvoróg||curds, soft cheese|lang=ru}}, {{etyl|ang|-}} {{term|lang=ang|þweran||to churn}}, {{term|ge-þweor||curds}})
 
 ====Noun====
-{{en-noun|-|pl2=butters}}
+{{en-noun|-|s}}
 
 # {{uncountable}} A soft, fatty foodstuff made by [[churn]]ing the [[cream]] of [[milk]] (generally cow's milk).
 # {{countable}} {{obsolete}} {{chemistry}} Any specific [[soft]] [[substance]]
