--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -107,7 +107,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Latin: {{t-|la|pulcher}}, {{t-|la|formosus|m}}, {{t+|la|bellus|m}}
 * Limburgish: {{t-|li|sjoen|xs=Limburgish}}
 * Lojban: {{t-|jbo|melbi|xs=Lojban}}
-* Low German: {{t-|nds|schöön}}{{t-|nds|scheun}}
+* Low German: {{t-|nds|schöön}}, {{t-|nds|scheun}}
 * Macedonian: {{t|mk|убав|tr=úbav}}, {{t-|mk|прекрасен|tr=prékrasen}}
 * Malay: {{t|ms|cantik}}, {{t|ms|indah}}, {{t|ms|molek}}
 * Navajo: {{tø|nv|nizhóní}}
