t+af:[[Tsjeggiese Republiek]] ([[WT:EDIT|Assisted]]) <Czech Republic#16838371>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -16,6 +16,7 @@
 
 ====Translations====
 {{trans-top|country in Central Europe}}
+* Afrikaans: {{t|af|Tsjeggiese Republiek}}
 * Arabic: {{t|ar|جمهورية التشيك|f|tr=jumhuuriyyat al-tshik}},  {{t|ar|التشيك|m|tr=al-tshik}}
 * Armenian: [[Չեխիայի Հանրապետություն]] (Čexiayi Hanrapetut'yun)
 * [[Azeri]]: {{t-|az|Çex Respublikası|xs=Azeri}}
