--- a/en/惵/惵.15626.wikitext
+++ b/en/惵/惵.15626.wikitext
@@ -3,7 +3,7 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9409<sub>4</sub>|canj=心心廿木 (PPTD)}}
 
-# {{defn|Han|sort=心09}}
+# fear
 
 ====References====
 * {{Han ref|kx=0392.290|dkj=10861|dj=0728.130|hdz=42326.040|uh=60F5|ud=24821|bh=D944|bd=55620}}
