t+roa-jer:[[brique]] t-balance ([[WT:EDIT|Assisted]]) <brick#16847488>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -85,6 +85,7 @@ From {{etyl|frm}} {{term|brique|lang=fr}}, probably from a {{etyl|gem}} source. 
 * Irish: {{t|ga|bríce|m}}
 * Italian: {{t+|it|mattone}}
 * Japanese: {{t|ja|煉瓦|tr=れんが, renga}}, {{t|ja|れんが|tr=renga|sc=Jpan}}
+* Jèrriais: {{tø|roa-jer|brique|f}}
 {{trans-mid}}
 * Kurdish:
 *: Sorani: {{t-|ku|خشت|tr=xisht|sc=ku-Arab}}
