t+ms:[[putus]] t+ms:[[terpotong]] ([[WT:EDIT|Assisted]]) <cut#16851921>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -46,6 +46,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * German: {{t+|de|geschnitten}}
 * Hebrew: {{t|he|חתוך|tr=khatúkh}}
 {{trans-mid}}
+* Malay: {{t|ms|putus}}, {{t|ms|terpotong}}
 * Portuguese: {{t-|pt|cortado|m}}
 * Russian: {{t|ru|резаный|sc=Cyrl|alt=ре́заный|tr=rézanyj}}, {{t|ru|нарезаный|sc=Cyrl|alt=наре́заный|tr=narézanyj}}, {{t|ru|порезаный|sc=Cyrl|alt=поре́заный|tr=porézanyj}}, {{t|ru|разрезаный|sc=Cyrl|alt=разре́заный|tr=razrézanyj}}
 * Spanish: {{t|es|cortado}}
