--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -72,7 +72,7 @@
 # {{colloquial}} Not using [[alcohol]], [[drugs]] etc. {{defdate|from 20th c.}}
 #* '''2001''', Ruella Frank, ''Body of Evidence'', p. 28:
 #*: ‘Alex's dad used a lot of drugs. He's been '''straight''' for years now, but it took a long time for him to be able to deal with his feelings.’
-# {{colloquial}} [[heterosexual|Heterosexual]].
+# {{colloquial}} [[heterosexual|Heterosexual]]; [[hetero]].
 #* '''2007''', Layla Kumari, ''The Guardian'', 17 Sep 2007:
 #*: Some of my friends - gay and '''straight''' - seem unable to understand the close but platonic nature of my and Gian's relationship, but have been supportive.
 #* '''2011''', Jodi Picoult, ''Sing You Home'', p. 273:
