t+zh:[[草龜]] t+zh:[[草龟]] t+ja:[[亀]] t+ja:[[陸亀]] t+fa:[[لاک‌پشت]] t-balance t+ar:[[سلحفاة]] t+ko:[[거북]] t+ko:[[거북이]] t+be:[[чарапаха]] t+ja:[[カメ]] t+hi:[[कछुआ]] t+vi:[[rùa]] t+el:[[χελώ... <tortoise#16869814>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -18,9 +18,12 @@
 ====Translations====
 {{trans-top|land-dwelling reptile}}
 * Albanian: {{t+|sq|breshkë|f|xs=Albanian}}
+* Arabic: {{t|ar|سلحفاة|f|tr=sulaḥfāa|alt=سُلَحْفَاة|sc=Arab}}
 * Armenian: {{t-|hy|կրիա|tr=kria}}
+* Belarusian: {{qualifier|tortoise or turtle}} {{t|be|чарапаха|f|tr=čarapáxa|sc=Cyrl}}
 * Bosnian: {{t-|bs|kornjača|f}}
 * Breton: [[baot]] {{f}}, baoted {{p}}, [[baot]] douar
+* Bulgarian: {{qualifier|tortoise or turtle}} {{t|bg|костенурка|f|tr=kostenúrka|sc=Cyrl}}
 * Catalan: [[tortuga]] {{f}}
 * Chinese: [[草龟]] (cǎoguī)
 * Croatian: {{t+|hr|kornjača|f}}
@@ -32,26 +35,27 @@
 * French: {{t+|fr|tortue|f}}
 ** Old French: {{t|fro|welke|f}}
 * German: {{t+|de|Schildkröte|f}}
-* Greek: {{t|el|χελώνα|sc=Grek}}
+* Greek: {{t|el|χελώνα|sc=Grek}}, {{qualifier|tortoise or turtle}} {{t|el|χελώνα|f|tr=chelóna|sc=Grek}}
 * Hebrew: {{t|he|צב|m|tr=tzav|sc=Hebr}}
+* Hindi: {{t|hi|कछुआ|m|tr=kachu'ā|sc=Deva}}
 * Hungarian: {{t+|hu|teknősbéka}}, {{t-|hu|teknős}}
 * Indonesian: {{t+|id|kura-kura|xs=Indonesian}}
 * Isthmus Zapotec: [[bigu]]
 * Italian: {{t+|it|tartaruga|f}}
-* Japanese: [[亀]] ([[かめ]], kame), [[陸亀]] ([[りくがめ]], rikugame)
+* Japanese: [[亀]] ([[かめ]], kame), [[陸亀]] ([[りくがめ]], rikugame), {{t|ja|亀|tr=かめ, kame|sc=Jpan}}, {{t|ja|陸亀|tr=りくがめ, rikugame|sc=Jpan}}, {{t|ja|カメ|tr=kame|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|tortue|f}}
-* Korean: [[거북]] (geobuk), [[거북이]] (geobugi)
+* Korean: [[거북]] (geobuk), [[거북이]] (geobugi), {{t|ko|거북|tr=geobuk|sc=Kore}}, {{t|ko|거북이|tr=geobugi|sc=Kore}}
 * Latin: {{t+|la|testudo|m}}
 * Latvian: {{t-|lv|bruņurupucis|m|xs=Latvian}}
 * Lithuanian: {{t-|lt|vėžlys|m|xs=Lithuanian}}
-* Macedonian: [[желка]] {{f}}
-* Mandarin: {{t-|cmn|王八|tr=wángba|sc=Hani}}
-* Nahuatl: {{t-|nah|āyotl}}
 {{trans-mid}}
+* Macedonian: [[желка]] {{f}}
+* Mandarin: {{t-|cmn|王八|tr=wángba|sc=Hani}}, {{t|zh|草龜|sc=Hani}}, {{t|zh|草龟|tr=cǎoguī|sc=Hani}}
+* Nahuatl: {{t-|nah|āyotl}}
 * Norwegian: {{t-|no|skilpadde}}, {{t-|no|skjelpadde}}
 * Pali: {{tø|pi|kacchapa|m}}
-* Persian: {{t+|fa|لاک‌پشت|f|xs=Persian}}
-* Polish: [[żółw lądowy]] {{m}}
+* Persian: {{t+|fa|لاک‌پشت|f|xs=Persian}}, {{t|fa|لاک‌پشت|tr=lâk-pošt|sc=fa-Arab}}
+* Polish: [[żółw lądowy]] {{m}}, {{qualifier|tortoise or turtle}} {{t|pl|żółw|m}}, {{t|pl|żółw lądowy|m}}
 * Portuguese: {{t+|pt|tartaruga|f}}, {{t+|pt|jabuti|m}}, {{t|pt|cágado}}
 * Romanian: [[țestoasă]] {{f}}, [[broască țestoasă]] {{f}}
 * Russian: {{t+|ru|черепаха|f|tr=čerepáxa}}
@@ -72,6 +76,7 @@
 *: Cyrillic: [[ташпақа]]
 *: Persic: {{fa-Arab|[[تاشپاقا]]}}
 *: Roman: [[taşpak̡a|taşpaqa]]
+* Vietnamese: {{t|vi|rùa}}
 * Volapük: {{qualifier|male or female}} {{t|vo|tortug}}, {{qualifier|male}} {{t|vo|hitortug}}, {{qualifier|female}} {{t|vo|jitortug}}, {{qualifier|male or female offspring, young}} {{t|vo|tortugül}}
 * West Frisian: [[skyldpod]]
 * malayalam: [[ആമ]] aama
