--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -18,52 +18,50 @@
 ====Translations====
 {{trans-top|land-dwelling reptile}}
 * Albanian: {{t+|sq|breshkë|f|xs=Albanian}}
-* Arabic: {{t|ar|سلحفاة|f|tr=sulaḥfāa|alt=سُلَحْفَاة|sc=Arab}}
+* Arabic: {{qualifier|tortoise or turtle}} {{t|ar|سلحفاة|f|tr=sulaḥfāa|alt=سُلَحْفَاة|sc=Arab}}, {{Arab|[[سلحفاة|سَلاحِف]]}} (salāḥif) {{p}}
 * Armenian: {{t-|hy|կրիա|tr=kria}}
 * Belarusian: {{qualifier|tortoise or turtle}} {{t|be|чарапаха|f|tr=čarapáxa|sc=Cyrl}}
-* Bosnian: {{t-|bs|kornjača|f}}
 * Breton: [[baot]] {{f}}, baoted {{p}}, [[baot]] douar
-* Bulgarian: {{qualifier|tortoise or turtle}} {{t|bg|костенурка|f|tr=kostenúrka|sc=Cyrl}}
+* Bulgarian: {{qualifier|tortoise or turtle}} {{t+|bg|костенурка|f|tr=kostenúrka}}
 * Catalan: [[tortuga]] {{f}}
-* Chinese: [[草龟]] (cǎoguī)
-* Croatian: {{t+|hr|kornjača|f}}
+* Chinese:
+*: Mandarin: {{t|zh|烏龜|sc=Hani}}, {{t|zh|乌龟|tr=wūguī|sc=Hani}}, {{t+|zh|王八|tr=wángba|sc=Hani}}, {{t|zh|草龜|sc=Hani}}, {{t|zh|草龟|tr=cǎoguī|sc=Hani}}
 * Czech: {{t+|cs|želva}}
 * Danish: {{t+|da|skildpadde|c}}
 * Dutch: {{t+|nl|schildpad|f}}
 * Esperanto: {{t-|eo|testudo|xs=Esperanto}}
 * Finnish: {{t+|fi|kilpikonna}}
 * French: {{t+|fr|tortue|f}}
-** Old French: {{t|fro|welke|f}}
+*: Old French: {{t|fro|welke|f}}
 * German: {{t+|de|Schildkröte|f}}
-* Greek: {{t|el|χελώνα|sc=Grek}}, {{qualifier|tortoise or turtle}} {{t|el|χελώνα|f|tr=chelóna|sc=Grek}}
-* Hebrew: {{t|he|צב|m|tr=tzav|sc=Hebr}}
+* Greek: {{qualifier|tortoise or turtle}} {{t|el|χελώνα|f|tr=chelóna|sc=Grek}}
+* Hebrew: {{qualifier|tortoise or turtle}} {{t|he|צב|m|tr=tzav|sc=Hebr}}
 * Hindi: {{t|hi|कछुआ|m|tr=kachu'ā|sc=Deva}}
 * Hungarian: {{t+|hu|teknősbéka}}, {{t-|hu|teknős}}
 * Indonesian: {{t+|id|kura-kura|xs=Indonesian}}
 * Isthmus Zapotec: [[bigu]]
 * Italian: {{t+|it|tartaruga|f}}
-* Japanese: [[亀]] ([[かめ]], kame), [[陸亀]] ([[りくがめ]], rikugame), {{t|ja|亀|tr=かめ, kame|sc=Jpan}}, {{t|ja|陸亀|tr=りくがめ, rikugame|sc=Jpan}}, {{t|ja|カメ|tr=kame|sc=Jpan}}
+* Japanese: {{qualifier|tortoise or turtle}} {{t|ja|亀|tr=[[かめ]], kame|sc=Jpan}}, {{t|ja|カメ|tr=kame|sc=Jpan}}, {{t|ja|陸亀|tr=りくがめ, rikugame|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|tortue|f}}
-* Korean: [[거북]] (geobuk), [[거북이]] (geobugi), {{t|ko|거북|tr=geobuk|sc=Kore}}, {{t|ko|거북이|tr=geobugi|sc=Kore}}
+* Korean: {{qualifier|tortoise or turtle}} {{t|ko|거북|tr=geobuk|sc=Kore}}, {{t|ko|거북이|tr=geobugi|sc=Kore}}
 * Latin: {{t+|la|testudo|m}}
 * Latvian: {{t-|lv|bruņurupucis|m|xs=Latvian}}
 * Lithuanian: {{t-|lt|vėžlys|m|xs=Lithuanian}}
 {{trans-mid}}
-* Macedonian: [[желка]] {{f}}
-* Mandarin: {{t-|cmn|王八|tr=wángba|sc=Hani}}, {{t|zh|草龜|sc=Hani}}, {{t|zh|草龟|tr=cǎoguī|sc=Hani}}
+* Macedonian: {{qualifier|tortoise or turtle}} {{t|ja|亀|tr=[[かめ]], kame|sc=Jpan}}{{t|mk|желка|f|tr=žélka}}
 * Nahuatl: {{t-|nah|āyotl}}
 * Norwegian: {{t-|no|skilpadde}}, {{t-|no|skjelpadde}}
 * Pali: {{tø|pi|kacchapa|m}}
-* Persian: {{t+|fa|لاک‌پشت|f|xs=Persian}}, {{t|fa|لاک‌پشت|tr=lâk-pošt|sc=fa-Arab}}
-* Polish: [[żółw lądowy]] {{m}}, {{qualifier|tortoise or turtle}} {{t|pl|żółw|m}}, {{t|pl|żółw lądowy|m}}
+* Persian: {{qualifier|tortoise or turtle}} {{t+|fa|لاک‌پشت|tr=lâk-pošt|sc=fa-Arab}}
+* Polish: {{qualifier|tortoise or turtle}} {{t+|pl|żółw|m}}, {{t|pl|żółw lądowy|m}}
 * Portuguese: {{t+|pt|tartaruga|f}}, {{t+|pt|jabuti|m}}, {{t|pt|cágado}}
 * Romanian: [[țestoasă]] {{f}}, [[broască țestoasă]] {{f}}
-* Russian: {{t+|ru|черепаха|f|tr=čerepáxa}}
+* Russian: {{qualifier|tortoise or turtle}} {{t+|ru|черепаха|f|tr=čerepáxa}}
 * Scottish Gaelic: {{t-|gd|crùban-coille|m|xs=Scottish Gaelic}}, {{t-|gd|sligeanach|m|xs=Scottish Gaelic}}
-* Serbian:
-*: Cyrillic: [[корњача]] {{f}}
-*: Roman: [[kornjača#Serbian|kornjača]] {{f}}
-* Slovene: [[kopenska želva]] {{f}}
+* Serbo-Croatian:
+*: Cyrillic: {{qualifier|tortoise or turtle}} {{t|sh|корњача|f|sc=Cyrl}}
+*: Roman: {{qualifier|tortoise or turtle}} {{t|sh|kornjača|f}}
+* Slovene: {{qualifier|tortoise or turtle}} {{t+|sl|želva|f}}, {{t|sl|kopenska želva|f}}
 * Somali: {{t-|so|diin|xs=Somali}}
 * Spanish: {{t+|es|tortuga|f}}, {{t|es|tortuga terrestre|f}}, {{t|es|morrocoy|m}} {{qualifier|Venezuela}}
 * Swahili: {{t+|sw|kobe|xs=Swahili}}
@@ -72,6 +70,7 @@
 * Telugu: [[తాబేలు]] (taabealu)
 * Tswana: {{t-|tn|khudu|xs=Tswana}} (9/10)
 * Turkish: {{t+|tr|kaplumbağa}}, {{t+|tr|tosbağa}}
+* Ukrainian: {{qualifier|tortoise or turtle}} {{t|uk|черепаха|f|tr=čerepáxa|xs=Ukrainian}}
 * Uyghur:
 *: Cyrillic: [[ташпақа]]
 *: Persic: {{fa-Arab|[[تاشپاقا]]}}
