t+ml:[[ആമ]] t+te:[[తాబేలు]] t+kn:[[ಆಮೆ]] t+kn:[[ಕೂರ್ಮ]] ([[WT:EDIT|Assisted]]) <tortoise#16869849>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -43,12 +43,14 @@
 * Italian: {{t+|it|tartaruga|f}}
 * Japanese: {{qualifier|tortoise or turtle}} {{t|ja|亀|tr=[[かめ]], kame|sc=Jpan}}, {{t|ja|カメ|tr=kame|sc=Jpan}}, {{t|ja|陸亀|tr=りくがめ, rikugame|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|tortue|f}}
+* Kannada: {{t|kn|ಆಮೆ|tr=āme|sc=Knda}}, {{t|kn|ಕೂರ್ಮ|tr=kūrma|sc=Knda}}
 * Korean: {{qualifier|tortoise or turtle}} {{t|ko|거북|tr=geobuk|sc=Kore}}, {{t|ko|거북이|tr=geobugi|sc=Kore}}
 * Latin: {{t+|la|testudo|m}}
 * Latvian: {{t-|lv|bruņurupucis|m|xs=Latvian}}
 * Lithuanian: {{t-|lt|vėžlys|m|xs=Lithuanian}}
 {{trans-mid}}
 * Macedonian: {{qualifier|tortoise or turtle}} {{t|ja|亀|tr=[[かめ]], kame|sc=Jpan}}{{t|mk|желка|f|tr=žélka}}
+* Malayalam: {{t|ml|ആമ|tr=āma|sc=Mlym}}
 * Nahuatl: {{t-|nah|āyotl}}
 * Norwegian: {{t-|no|skilpadde}}, {{t-|no|skjelpadde}}
 * Pali: {{tø|pi|kacchapa|m}}
@@ -67,7 +69,7 @@
 * Swahili: {{t+|sw|kobe|xs=Swahili}}
 * Swedish: {{t+|sv|sköldpadda}}
 * Tamil: {{t|ta|ஓடன்|tr=ōṭaṉ|sc=Taml}}
-* Telugu: [[తాబేలు]] (taabealu)
+* Telugu: [[తాబేలు]] (taabealu), {{t|te|తాబేలు|tr=tābēlu|sc=Telu}}
 * Tswana: {{t-|tn|khudu|xs=Tswana}} (9/10)
 * Turkish: {{t+|tr|kaplumbağa}}, {{t+|tr|tosbağa}}
 * Ukrainian: {{qualifier|tortoise or turtle}} {{t|uk|черепаха|f|tr=čerepáxa|xs=Ukrainian}}
