t+sk:[[korytnačka]] ([[WT:EDIT|Assisted]]) <tortoise#16869865>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -63,6 +63,7 @@
 * Serbo-Croatian:
 *: Cyrillic: {{qualifier|tortoise or turtle}} {{t|sh|корњача|f|sc=Cyrl}}
 *: Roman: {{qualifier|tortoise or turtle}} {{t|sh|kornjača|f}}
+* Slovak: {{t|sk|korytnačka|f}}
 * Slovene: {{qualifier|tortoise or turtle}} {{t+|sl|želva|f}}, {{t|sl|kopenska želva|f}}
 * Somali: {{t-|so|diin|xs=Somali}}
 * Spanish: {{t+|es|tortuga|f}}, {{t|es|tortuga terrestre|f}}, {{t|es|morrocoy|m}} {{qualifier|Venezuela}}
