--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -50,6 +50,7 @@
 * Lithuanian: {{t-|lt|vėžlys|m|xs=Lithuanian}}
 {{trans-mid}}
 * Macedonian: {{qualifier|tortoise or turtle}} {{t|mk|желка|f|tr=žélka}}
+* Malay: {{t|ms|penyu}}
 * Malayalam: {{t|ml|ആമ|tr=āma|sc=Mlym}}
 * Nahuatl: {{t-|nah|āyotl}}
 * Norwegian: {{t-|no|skilpadde}}, {{t-|no|skjelpadde}}
