t+az:[[tısbağa]] ([[WT:EDIT|Assisted]]) <tortoise#16869887>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -20,6 +20,7 @@
 * Albanian: {{t+|sq|breshkë|f|xs=Albanian}}
 * Arabic: {{qualifier|tortoise or turtle}} {{t|ar|سلحفاة|f|tr=sulaḥfāa|alt=سُلَحْفَاة|sc=Arab}}, {{Arab|[[سلحفاة|سَلاحِف]]}} (salāḥif) {{p}}
 * Armenian: {{t-|hy|կրիա|tr=kria}}
+* Azeri: {{qualifier|tortoise or turtle}} {{t|az|tısbağa}}
 * Belarusian: {{qualifier|tortoise or turtle}} {{t|be|чарапаха|f|tr=čarapáxa|sc=Cyrl}}
 * Breton: [[baot]] {{f}}, baoted {{p}}, [[baot]] douar
 * Bulgarian: {{qualifier|tortoise or turtle}} {{t+|bg|костенурка|f|tr=kostenúrka}}
