--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -22,6 +22,7 @@
 * Armenian: {{t-|hy|կրիա|tr=kria}}
 * Azeri: {{qualifier|tortoise or turtle}} {{t|az|tısbağa}}
 * Belarusian: {{qualifier|tortoise or turtle}} {{t|be|чарапаха|f|tr=čarapáxa|sc=Cyrl}}
+* Bengali: {{qualifier|tortoise or turtle}} {{t|bn|কাছিম|tr=kachim|sc=Beng}}
 * Breton: [[baot]] {{f}}, baoted {{p}}, [[baot]] douar
 * Bulgarian: {{qualifier|tortoise or turtle}} {{t+|bg|костенурка|f|tr=kostenúrka}}
 * Burmese: {{qualifier|tortoise or turtle}} {{t|my|လိပ်|tr=lei|sc=Mymr}}
@@ -51,8 +52,8 @@
 * Latin: {{t+|la|testudo|m}}
 * Latvian: {{t-|lv|bruņurupucis|m|xs=Latvian}}
 * Lithuanian: {{t-|lt|vėžlys|m|xs=Lithuanian}}
-* Macedonian: {{qualifier|tortoise or turtle}} {{t|mk|желка|f|tr=žélka}}
 {{trans-mid}}
+* Macedonian: {{qualifier|tortoise or turtle}} {{t|mk|желка|f|tr=žélka}}
 * Malay: {{t|ms|penyu}}, {{t|ms|kura-kura}}
 * Malayalam: {{t|ml|ആമ|tr=āma|sc=Mlym}}
 * Nahuatl: {{t-|nah|āyotl}}
