--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -47,12 +47,13 @@
 * Japanese: {{qualifier|tortoise or turtle}} {{t|ja|亀|tr=[[かめ]], kame|sc=Jpan}}, {{t|ja|カメ|tr=kame|sc=Jpan}}, {{t|ja|陸亀|tr=りくがめ, rikugame|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|tortue|f}}
 * Kannada: {{t|kn|ಆಮೆ|tr=āme|sc=Knda}}, {{t|kn|ಕೂರ್ಮ|tr=kūrma|sc=Knda}}
+* Kazakh: {{qualifier|tortoise or turtle}} {{t|kk|тасбақа|tr=tasbaqa|sc=Cyrl}}
 * {{trreq|Khmer}}
 * Korean: {{qualifier|tortoise or turtle}} {{t|ko|거북|tr=geobuk|sc=Kore}}, {{t|ko|거북이|tr=geobugi|sc=Kore}}
 * Latin: {{t+|la|testudo|m}}
 * Latvian: {{t-|lv|bruņurupucis|m|xs=Latvian}}
-* Lithuanian: {{t-|lt|vėžlys|m|xs=Lithuanian}}
 {{trans-mid}}
+* Lithuanian: {{t-|lt|vėžlys|m|xs=Lithuanian}}
 * Macedonian: {{qualifier|tortoise or turtle}} {{t|mk|желка|f|tr=žélka}}
 * Malay: {{t|ms|penyu}}, {{t|ms|kura-kura}}
 * Malayalam: {{t|ml|ആമ|tr=āma|sc=Mlym}}
