--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -90,7 +90,7 @@
 * Vietnamese: {{qualifier|tortoise or turtle}} {{t|vi|rùa}}
 * Volapük: {{qualifier|male or female}} {{t|vo|tortug}}, {{qualifier|male}} {{t|vo|hitortug}}, {{qualifier|female}} {{t|vo|jitortug}}, {{qualifier|male or female offspring, young}} {{t|vo|tortugül}}
 * West Frisian: [[skyldpod]]
-* Yiddish: {{qualifier|tortoise or turtle}} {{t|yi|טשערעפּאַכע|f|tr=cherepakhe|sc=Hebr}}
+* Yiddish: {{qualifier|tortoise or turtle}} {{t|yi|טשערעפּאַכע|f|tr=tsherepakhe|sc=Hebr}}
 {{trans-bottom}}
 
 ===See also===
