--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -52,6 +52,7 @@
 * {{trreq|Khmer}}
 * Korean: {{qualifier|tortoise or turtle}} {{t|ko|거북|tr=geobuk|sc=Kore}}, {{t|ko|거북이|tr=geobugi|sc=Kore}}
 * Kyrgyz: {{qualifier|tortoise or turtle}} {{t|ky|ташбака|tr=tašbaka|sc=Cyrl}}
+* Lao: {{qualifier|tortoise or turtle}} {{t|lo|ເຕົ່າ|tr=tao|sc=Laoo}}
 * Latin: {{t+|la|testudo|m}}
 * Latvian: {{t-|lv|bruņurupucis|m|xs=Latvian}}
 * Lithuanian: {{t-|lt|vėžlys|m|xs=Lithuanian}}
