--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -66,7 +66,7 @@
 * Persian: {{qualifier|tortoise or turtle}} {{t+|fa|لاک‌پشت|tr=lâk-pošt|sc=fa-Arab}}
 * Polish: {{qualifier|tortoise or turtle}} {{t+|pl|żółw|m}}, {{t|pl|żółw lądowy|m}}
 * Portuguese: {{qualifier|tortoise or turtle}} {{t+|pt|tartaruga|f}}, {{t+|pt|jabuti|m}}, {{t|pt|cágado}}
-* Romanian: [[țestoasă]] {{f}}, [[broască țestoasă]] {{f}}
+* Romanian: {{t|ro|țestoasă|f}}, {{t|ro|broască țestoasă|f}}
 * Russian: {{qualifier|tortoise or turtle}} {{t+|ru|черепаха|f|tr=čerepáxa}}
 * Scottish Gaelic: {{t-|gd|crùban-coille|m|xs=Scottish Gaelic}}, {{t-|gd|sligeanach|m|xs=Scottish Gaelic}}
 * Serbo-Croatian:
