--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -17,6 +17,7 @@
 
 ====Translations====
 {{trans-top|land-dwelling reptile}}
+* Afrikaans: {{qualifier|tortoise or turtle}} {{t|af|skilpad}}
 * Albanian: {{t+|sq|breshkë|f|xs=Albanian}}
 * Arabic: {{qualifier|tortoise or turtle}} {{t|ar|سلحفاة|f|tr=sulaḥfāa|alt=سُلَحْفَاة|sc=Arab}}, {{Arab|[[سلحفاة|سَلاحِف]]}} (salāḥif) {{p}}
 * Armenian: {{t-|hy|կրիա|tr=kria}}
@@ -55,8 +56,8 @@
 * Lao: {{qualifier|tortoise or turtle}} {{t|lo|ເຕົ່າ|tr=tao|sc=Laoo}}
 * Latin: {{t+|la|testudo|m}}
 * Latvian: {{t-|lv|bruņurupucis|m|xs=Latvian}}
-* Lithuanian: {{t-|lt|vėžlys|m|xs=Lithuanian}}
 {{trans-mid}}
+* Lithuanian: {{t-|lt|vėžlys|m|xs=Lithuanian}}
 * Macedonian: {{qualifier|tortoise or turtle}} {{t|mk|желка|f|tr=žélka}}
 * Malay: {{t|ms|penyu}}, {{t|ms|kura-kura}}
 * Malayalam: {{t|ml|ആമ|tr=āma|sc=Mlym}}
