--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -50,7 +50,7 @@
 * Jèrriais: {{tø|roa-jer|tortue|f}}
 * Kannada: {{t|kn|ಆಮೆ|tr=āme|sc=Knda}}, {{t|kn|ಕೂರ್ಮ|tr=kūrma|sc=Knda}}
 * Kazakh: {{qualifier|tortoise or turtle}} {{t|kk|тасбақа|tr=tasbaqa|sc=Cyrl}}
-* {{trreq|Khmer}}
+* Khmer: {{t|km|អណ្ដើក|tr=ɑndaək|sc=Khmr}}
 * Korean: {{qualifier|tortoise or turtle}} {{t|ko|거북|tr=geobuk|sc=Kore}}, {{t|ko|거북이|tr=geobugi|sc=Kore}}
 * Kyrgyz: {{qualifier|tortoise or turtle}} {{t|ky|ташбака|tr=tašbaka|sc=Cyrl}}
 * Lao: {{qualifier|tortoise or turtle}} {{t|lo|ເຕົ່າ|tr=tao|sc=Laoo}}
