--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -276,6 +276,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 * Norwegian: {{t|no|slåsskamp}}
 * Portuguese: {{t+|pt|luta|f}}
 * Romanian: {{t-|ro|luptă|f}}, {{t-|ro|bătaie}}
+* Romansch: {{qualifier|military}} {{t|rm|cumbat|m}}, {{t|rm|cumbata|f}}, {{qualifier|sport}} {{t|rm|lutga|f}}
 * Russian: {{t+|ru|драка|f|tr=dráka}}, {{t+|ru|бой|m|tr=boj}}
 * Scottish Gaelic: [[cogadh]] {{m}}, [[sabaid]] {{f}}, {{t-|gd|còmhrag|f|xs=Scottish Gaelic}}
 * Slovak: {{t|sk|boj}}
@@ -307,6 +308,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 * Norwegian: {{t-|no|slag}}
 * Polish: {{t|pl|bój}}
 * Portuguese: {{t+|pt|batalha|f}}, {{t+|pt|luta|f}}
+* Romansch: {{t|rm|cumbat|m}}, {{t|rm|cumbata|f}}
 * Russian: {{t+|ru|битва|f|tr=bítva}}, {{t+|ru|сражение|n|tr=sražénije}}
 * Scottish Gaelic: [[cogadh]] {{m}}, [[sabaid]] {{f}}, [[blàr]] {{m}}
 * Swahili: {{t+|sw|vita|xs=Swahili}}
@@ -343,12 +345,13 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 * French: {{t+|fr|combat|m}}
 * Hebrew: {{t-|he|קרב|m|tr=kráv}}
 * Icelandic: {{t|is|bardagi|m}}, {{t|is|slagur|m}}
-{{trans-mid}}
 * Italian: {{t+|it|combattimento|m}}, {{t+|it|incontro|m}}
+{{trans-mid}}
 * Japanese: [[試合]] (しあい, shiai)
 * Norwegian: {{t+|no|kamp}}
 * Polish: {{t+|pl|walka|f}}
 * Portuguese: {{t+|pt|luta|f}}, {{t+|pt|combate|m}}
+* Romansch: {{t|rm|lutga|f}}
 * Russian: {{t+|ru|бой|m|tr=boj}}
 * Swedish: {{t+|sv|match}}, {{t+|sv|fajt}}
 {{trans-bottom}}
