--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -302,7 +302,7 @@
 
 # A part of a [[racecourse]], [[running]] [[track]] or other road etc that is not [[curved]].
 # A [[heterosexual]].
-#: ''My friends call '''straight''' people "heteros".''
+#: ''My friends call '''straights''' "heteros".''
 # In [[poker]], five cards in [[sequence]].
 # {{slang}} A [[cigarette]], particularly one containing [[tobacco]] instead of [[marijuana]]. Also [[straighter#Noun|straighter]]. {{defdate|from 20th c.}}
 #* ['''1923''', J[oseph] Manchon, ''Le slang : lexique de l'anglais familier et vulgaire : précédé d'une étude sur la pronunciation et la grammaire populaires'', p. 296:
