--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -87,7 +87,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Georgian: {{t|ka|მშვენიერი|tr=mšvenieri|sc=Geor}}, {{t|ka|ლამაზი|tr=lamazi|sc=Geor}}
 * German: {{t+|de|schön}}
 * Greek: {{t+|el|ωραίος|m}} (oraíos), {{t+|el|όμορφος|m}} (ómorfos)
-* Hebrew: {{t+|he|יפה|m|alt=יָפֶהtr=yafé}}, {{t+|he|יפה|f|alt=יָפָה|tr=yafá}}
+* Hebrew: {{t+|he|יפה|m|alt=יָפֶה|tr=yafé}}, {{t+|he|יפה|f|alt=יָפָה|tr=yafá}}
 * Hindi: {{t-|hi|ख़ूबसूरत|tr=xūbsūrat|xs=Hindi}}, {{t-|hi|सुन्दर|tr=sundar|xs=Hindi}}
 * Hungarian: {{t+|hu|szép}}, {{t+|hu|gyönyörű}}
 * Icelandic: {{t+|is|fallegur}}, {{t+|is|fagur}}
