--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -59,6 +59,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Indonesian: {{t|id|dahan}}
 * Italian: {{t+|it|ramo}}
 * Japanese: {{t|ja|枝|tr=えだ, eda|sc=Jpan}}
+* Jèrriais: {{tø|roa-jer|branque|f}}
 * Kiput: {{tø|kyi|din}}
 * Kurdish:
 *: Sorani: {{ku-Arab|[[چرۆ]]}}, {{ku-Arab|[[لق]]}}
