t+ko:[[버터]] t+th:[[เนย]] t+lo:[[ເບີ]] t+ar:[[زبدة]] t+arz:[[زبدة]] t+sh:[[маслац]] t+sh:[[maslac]] t+sl:[[maslo]] t+sl:[[puter]] t+be:[[масла]] t+te:[[వెన్న]] t+id:[[mentega]] t-balance ([[WT:EDIT|Assis... <butter#16889180>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -185,11 +185,12 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Afrikaans: {{t+|af|botter|xs=Afrikaans}}
 * Albanian: {{t-|sq|gjalpë|xs=Albanian}}
 * American Sign Language: {{tø|ase|H@TipPalm-PalmDown-OpenB@CenterChesthigh-PalmUp Contact H@BasePalm H@TipPalm Contact H@BasePalm H@TipPalm Contact H@BasePalm|xs=American Sign Language}}
-* Arabic: {{Arab|[[زبدة]]}} (zúbda) {{f}}
+* Arabic: {{Arab|[[زبدة]]}} (zúbda) {{f}}, {{t|ar|زبدة|f|tr=zúbda|sc=Arab}}
 *: Egyptian Arabic {{Arab|[[زبدة]]}} (zébda) {{f}}
 * Armenian: {{t-|hy|կարագ|tr=karag}}
 * Azeri: {{t+|az|yağ|xs=Azeri}}
 * Bavarian: [[Budda]] {{m}}
+* Belarusian: {{t|be|масла|n|tr=másla|sc=Cyrl}}
 * Bengali: {{t-|bn|মাখন|tr=makhôn|sc=Beng|xs=Bengali}}
 * Breton: [[amanenn]] {{m}}
 * Bulgarian: {{t-|bg|масло|n|tr=máslo}}
@@ -215,16 +216,17 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Hungarian: {{t+|hu|vaj}}
 * Icelandic: {{t+|is|smjör|n}}
 * Ido: [[butro]]
+* Indonesian: {{t|id|mentega}}
 * Interlingua: [[butyro]]
 * Irish: {{t+|ga|im|m|xs=Irish}}
 * Italian: {{t+|it|burro|m}}
 * Japanese: {{t+|ja|バター|tr=batā}}, {{t+|ja|乳酪|tr=[[にゅうらく]], nyūraku}}
 * Kinyarwanda: [[amavuta]]
-* Korean: [[버터]] (beoteo)
+* Korean: [[버터]] (beoteo), {{t|ko|버터|tr=beoteo|sc=Kore}}
 {{trans-mid}}
 * Kurdish:
 *: Sorani: {{t+|ku|که‌ره‌|sc=ku-Arab}}
-* Lao: {{Laoo|[[ເບີ]]}} (bəə)
+* Lao: {{Laoo|[[ເບີ]]}} (bəə), {{t|lo|ເບີ|tr=bəə|sc=Laoo}}
 * Latgalian: {{tø|ltg|svīsts}}
 * Latin: {{t-|la|butyrum}}
 * Latvian: {{t-|lv|sviests|m|xs=Latvian}}
@@ -247,21 +249,25 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Sanskrit: {{t|sa|नवनीत|tr=navnīta|sc=Deva}}, {{t|sa|घृत|tr=ghr̥ta|sc=Deva}}
 * Scottish Gaelic: {{t-|gd|ìm|m|xs=Scottish Gaelic}}
 * Serbian: [[маслац]] ([[maslac]]) {{m}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|маслац|m}}
+*: Roman: {{t|sh|maslac|m}}
 * Sinhalese: {{t-|si|බටර්|tr=batar|sc=Sinh|xs=Sinhalese}}
 * Slovak: {{t-|sk|maslo|n}}
-* Slovene: [[maslo]] {{n}}, [[puter]] {{m}} {{qualifier|colloquial}}
+* Slovene: [[maslo]] {{n}}, [[puter]] {{m}} {{qualifier|colloquial}}, {{t|sl|maslo|n}}, {{qualifier|colloquial}} {{t|sl|puter|m}}
 * Sotho: {{t+|st|sereledi|xs=Sotho}}
 * Spanish: [[mantequilla]] {{f}}, [[manteca]] {{f}} {{qualifier|Argentina, Paraguay, Uruguay}}
 * Swahili: {{t+|sw|siagi|xs=Swahili}}
 * Swedish: {{t+|sv|smör|n}}
-* Telugu: [[వెన్న]]
-* Thai: {{Thai|[[เนย]]}} (noey)
+* Telugu: [[వెన్న]], {{t|te|వెన్న|tr=venna|sc=Telu}}
+* Thai: {{Thai|[[เนย]]}} (noey), {{t|th|เนย|tr=noey|sc=Thai}}
 * Turkish: {{t+|tr|tereyağı}}
 * Ukrainian: {{t-|uk|масло|n|tr=máslo|xs=Ukrainian}}
 * Urdu: {{t|ur|گھی|tr=ghī|sc=ur-Arab}}, {{t|ur|مکھن|tr=makkhan|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|bơ|xs=Vietnamese}}
 * West Frisian: {{t-|fy|bûter|c|xs=West Frisian}}
 * Yiddish: {{t|yi|פּוטער|f|tr=puter|sc=Hebr}}
+* Egyptian Arabic: {{tø|arz|زبدة|f|tr=zébda|sc=Arab}}
 {{trans-bottom}}
 
 {{trans-top|in chemistry}}
