--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -185,19 +185,17 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Afrikaans: {{t+|af|botter|xs=Afrikaans}}
 * Albanian: {{t-|sq|gjalpë|xs=Albanian}}
 * American Sign Language: {{tø|ase|H@TipPalm-PalmDown-OpenB@CenterChesthigh-PalmUp Contact H@BasePalm H@TipPalm Contact H@BasePalm H@TipPalm Contact H@BasePalm|xs=American Sign Language}}
-* Arabic: {{Arab|[[زبدة]]}} (zúbda) {{f}}, {{t|ar|زبدة|f|tr=zúbda|sc=Arab}}
-*: Egyptian Arabic {{Arab|[[زبدة]]}} (zébda) {{f}}
+* Arabic: {{t|ar|زبدة|f|tr=zúbda|sc=Arab}}
+*: Egyptian Arabic: {{tø|arz|زبدة|f|tr=zébda|sc=Arab}}
 * Armenian: {{t-|hy|կարագ|tr=karag}}
 * Azeri: {{t+|az|yağ|xs=Azeri}}
-* Bavarian: [[Budda]] {{m}}
 * Belarusian: {{t|be|масла|n|tr=másla|sc=Cyrl}}
 * Bengali: {{t-|bn|মাখন|tr=makhôn|sc=Beng|xs=Bengali}}
 * Breton: [[amanenn]] {{m}}
 * Bulgarian: {{t-|bg|масло|n|tr=máslo}}
 * Catalan: [[mantega]] {{f}}
 * Chinese:
-*: Mandarin: {{t-|cmn|黃油|sc=Hani}}, {{t-|cmn|黄油|tr=huángyóu|sc=Hani}}, {{t+|zh|牛油|tr=niúyóu|sc=Hani}}, {{t-|zh|白脫|sc=Hani}}, {{t-|zh|白脱|tr=báituō|sc=Hani}}
-* Croatian: {{t-|hr|maslac|m}}
+*: Mandarin: {{t+|cmn|黃油|sc=Hani}}, {{t+|cmn|黄油|tr=huángyóu|sc=Hani}}, {{t+|zh|牛油|tr=niúyóu|sc=Hani}}, {{t+|zh|白脫|sc=Hani}}, {{t+|zh|白脱|tr=báituō|sc=Hani}}
 * Czech: {{t+|cs|máslo|n}}
 * Dalmatian: {{tø|dlm|butir|m}}
 * Danish: {{t-|da|smør}}
@@ -209,6 +207,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * French: {{t+|fr|beurre|m}}
 * Georgian: {{t-|ka|კარაქი|tr=karak'i|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Butter|f}}
+*: Bavarian: [[Budda]] {{m}}
 * Greek: {{t|el|βούτυρο|n|tr=voútyro}}
 * Greenlandic: {{t-|kl|punneq|xs=Greenlandic}}
 * Hebrew: {{t+|he|חמאה|f|alt=חֶמְאָה|tr=khem'a}}
@@ -222,11 +221,11 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Italian: {{t+|it|burro|m}}
 * Japanese: {{t+|ja|バター|tr=batā}}, {{t+|ja|乳酪|tr=[[にゅうらく]], nyūraku}}
 * Kinyarwanda: [[amavuta]]
-* Korean: [[버터]] (beoteo), {{t|ko|버터|tr=beoteo|sc=Kore}}
+* Korean: {{t|ko|버터|tr=beoteo|sc=Kore}}
 {{trans-mid}}
 * Kurdish:
 *: Sorani: {{t+|ku|که‌ره‌|sc=ku-Arab}}
-* Lao: {{Laoo|[[ເບີ]]}} (bəə), {{t|lo|ເບີ|tr=bəə|sc=Laoo}}
+* Lao: {{t|lo|ເບີ|tr=bəə|sc=Laoo}}
 * Latgalian: {{tø|ltg|svīsts}}
 * Latin: {{t-|la|butyrum}}
 * Latvian: {{t-|lv|sviests|m|xs=Latvian}}
@@ -236,7 +235,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Malay: {{t|ms|mentega}}
 * Manx: {{t-|gv|eeym|f|xs=Manx}}
 * Marathi: {{t-|mr|माखणे|tr=mākhaṇe|sc=Deva|xs=Marathi}}
-* Mongolian: {{Cyrl|[[цөцгийн тос]]}} (tsötsgiin tos)
+* Mongolian: {{t|mn|цөцгийн тос|tr=tsötsgiin tos|sc=Cyrl}}
 * Navajo: {{tø|nv|mandagyíiya}}
 * Old Church Slavonic: {{tø|cu|масло|n|tr=maslo|sc=Cyrs}}
 * Old English: {{t-|ang|butere|f|xs=Old English}}
@@ -248,26 +247,24 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Russian: {{t+|ru|масло|n|tr=máslo}}, {{t+|ru|сливочное масло|n|tr=slívočnoje máslo}}
 * Sanskrit: {{t|sa|नवनीत|tr=navnīta|sc=Deva}}, {{t|sa|घृत|tr=ghr̥ta|sc=Deva}}
 * Scottish Gaelic: {{t-|gd|ìm|m|xs=Scottish Gaelic}}
-* Serbian: [[маслац]] ([[maslac]]) {{m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|маслац|m}}
 *: Roman: {{t|sh|maslac|m}}
 * Sinhalese: {{t-|si|බටර්|tr=batar|sc=Sinh|xs=Sinhalese}}
 * Slovak: {{t-|sk|maslo|n}}
-* Slovene: [[maslo]] {{n}}, [[puter]] {{m}} {{qualifier|colloquial}}, {{t|sl|maslo|n}}, {{qualifier|colloquial}} {{t|sl|puter|m}}
+* Slovene: {{t|sl|maslo|n}}, {{t|sl|puter|m}} {{qualifier|colloquial}}
 * Sotho: {{t+|st|sereledi|xs=Sotho}}
-* Spanish: [[mantequilla]] {{f}}, [[manteca]] {{f}} {{qualifier|Argentina, Paraguay, Uruguay}}
+* Spanish: {{t|es|mantequilla|f}}, {{t|es|manteca|f}} {{qualifier|Argentina, Paraguay, Uruguay}}
 * Swahili: {{t+|sw|siagi|xs=Swahili}}
 * Swedish: {{t+|sv|smör|n}}
-* Telugu: [[వెన్న]], {{t|te|వెన్న|tr=venna|sc=Telu}}
-* Thai: {{Thai|[[เนย]]}} (noey), {{t|th|เนย|tr=noey|sc=Thai}}
+* Telugu: {{t|te|వెన్న|tr=venna|sc=Telu}}
+* Thai: {{t|th|เนย|tr=noey|sc=Thai}}
 * Turkish: {{t+|tr|tereyağı}}
 * Ukrainian: {{t-|uk|масло|n|tr=máslo|xs=Ukrainian}}
 * Urdu: {{t|ur|گھی|tr=ghī|sc=ur-Arab}}, {{t|ur|مکھن|tr=makkhan|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|bơ|xs=Vietnamese}}
 * West Frisian: {{t-|fy|bûter|c|xs=West Frisian}}
 * Yiddish: {{t|yi|פּוטער|f|tr=puter|sc=Hebr}}
-* Egyptian Arabic: {{tø|arz|زبدة|f|tr=zébda|sc=Arab}}
 {{trans-bottom}}
 
 {{trans-top|in chemistry}}
