--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -222,7 +222,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Italian: {{t+|it|burro|m}}
 * Japanese: {{t+|ja|バター|tr=batā}}, {{t+|ja|乳酪|tr=[[にゅうらく]], nyūraku}}
 * Kazakh: {{t|kk|май|tr=may|sc=Cyrl}}
-* Khmer: {{t|km|បឺរ|tr=bər|sc=Khmr}}
+* Khmer: {{t|km|បឺរ|tr=bər|sc=Khmr}}, {{t|km|ខ្លាញ់ទឹកដោះ|tr=klañ tɨk dɑh|sc=Khmr}}
 * Kinyarwanda: [[amavuta]]
 * Korean: {{t|ko|버터|tr=beoteo|sc=Kore}}
 * Kurdish:
