--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Alternative forms===
-* [[substaunce]]
+* [[substaunce]] {{qualifier|archaic}}
 
 ===Etymology===
 From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substantia||substance, essence|lang=la}}, from {{term|substans|substāns|lang=la}}, present active participle of {{term|substo|substō|exist; literally, stand under|lang=la}}, from {{term|sub|lang=la}} + {{term|sto|stō|stand|lang=la}}.
@@ -101,7 +101,7 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 
 {{trans-top|drugs}}
 * Chinese:
-*: {{trreq|zh}}
+*: {{trreq|cmn}}
 * Finnish: {{t+|fi|aine|alt=aineet}}
 * German: {{t+|de|Substanz|f}}
 * Greek: {{t|el|ουσίες|tr=ousíes}} {{f|p}}
@@ -139,7 +139,7 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 * {{ttbc|yi}}: [[מאַטעריע]] (materye)
 {{trans-bottom}}
 
-====See also====
+===See also===
 * [[style]]
 
 [[Category:1000 English basic words]]
@@ -162,6 +162,27 @@ Borrowed from {{etyl|la|fr}} {{term|substantia||substance, essence|lang=la}}, fr
 
 ===Anagrams===
 * [[cubassent#French|cubassent]]
+
+----
+
+==Old French==
+
+===Alternative forms===
+* {{l|fro|sostance}}
+* {{l|fro|sustance}}
+
+===Noun===
+{{fro-noun|f}}
+
+# most [[essential]]; [[substantial]] part
+# [[existence]]
+
+====Related terms====
+* {{l|fro|substantiel}}
+
+====Descendants====
+* English: {{l|en|substance}} {{qualifier|borrowed}}
+* French: {{l|fr|substance}}
 
 [[ar:substance]]
 [[cs:substance]]
