t+vo:[[safranakrok]] t+vo:[[safranayelov]] t+vo:[[safranayelovik]] ([[WT:EDIT|Assisted]]) <saffron#16896120>

--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -58,6 +58,7 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 * Thai: [[หญ้าฝรั่น]] (Ya Faran)
 * Turkish: {{t+|tr|safran}}
 * Urdu: {{ur-Arab|[[کیسر]]}} (kesar) {{f}}
+* Volapük: {{t|vo|safranakrok}}
 {{trans-bottom}}
 
 {{trans-top|spice}}
@@ -126,6 +127,7 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 * Swedish: {{t+|sv|saffran}}
 * Turkish: {{t+|tr|safran}}
 * Urdu: {{ur-Arab|[[کیسری]]}} (kesarī), {{ur-Arab|[[کیسریا]]}} (kesariyā)
+* Volapük: {{t|vo|safranayelov}}
 {{trans-bottom}}
 
 {{checktrans-top}}
@@ -151,6 +153,7 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 * Russian: {{t+|ru|шафранный|tr=šafránnyj}}, {{t+|ru|шафрановый|tr=šafránovyj}}
 * Swedish: {{t|sv|saffransfärgad}}, {{t|sv|saffransgul}}
 * Urdu: {{ur-Arab|[[کیسری]]}} (kesarī), {{ur-Arab|[[کیسریا]]}} (kesariyā)
+* Volapük: {{t|vo|safranayelovik}}
 {{trans-bottom}}
 
 ===Derived terms===
