t+hu:[[ár]] ([[WT:EDIT|Assisted]]) <cost#16896282>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -95,6 +95,7 @@ From {{etyl|enm}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{term|c
 * German: {{t+|de|Kosten|f|p}}
 * Greek: {{t+|el|κόστος|n|tr=kóstos}}, {{t+|el|δαπάνη|f|tr=dapáni}}, {{t+|el|τίμημα|n|tr=tímima}}, {{t+|el|αντίτιμο|n|tr=antítimo}}
 * Hebrew: {{t|he|עלות|tr='alut|f}}
+* Hungarian: {{t|hu|ár}}
 * Italian: {{t+|it|costo|m}}, {{t+|it|spesa|f}}
 * Japanese: {{t+|ja|費用|tr=[[ひよう]], hiyō}}
 {{trans-mid}}
