--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -45,7 +45,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 * Some users use {{term|badly}} when referring to an emotional state, and {{term|bad}} when referring to a more physical or medical state.
 <!--* ''I feel bad.'' means either ''I seem to myself to be [[sick]].'' or ''I am full of [[regret]].''
 * ''I feel badly.'' means ''I have [[trouble]] experiencing emotions.'' or ''I am not able to use the sense of touch well.'' Both comments incomplete and misleading.-->
-* Adjectives to which "feel" is often applied as a copula: free, cold, cool, warm, hot, young, old, good, great, fine, happy, glad, satisfied, excited, bad, depressed, unhappy, sad, blue, sorry, smart, stupid, loved, appreciated, accepted, rejected, lonely, isolated, insulted, offended, slighted, cheated, shy, refreshed, tired, exhausted, calm, relaxed, angry, annoyed, frustrated, anxious, worried, jealous,  proud, confident, safe, grateful, uncomfortable, unsafe, insecure, desperate, guilty, ashamed, disappointed, dirty, odd, strange, ill, sick.
+* Adjectives to which "feel" is often applied as a copula: free, cold, cool, warm, hot, young, old, good, great, fine, happy, glad, satisfied, excited, bad, depressed, unhappy, sad, blue, sorry, smart, stupid, loved, appreciated, accepted, rejected, lonely, isolated, insulted, offended, slighted, cheated, shy, refreshed, tired, exhausted, calm, relaxed, angry, annoyed, frustrated, anxious, worried, jealous, proud, confident, safe, grateful, uncomfortable, unsafe, insecure, desperate, guilty, ashamed, disappointed, dirty, odd, strange, ill, sick.
 
 =====Derived terms=====
 {{rel-top3|Terms derived from ''feel'' (verb)}}
@@ -78,19 +78,19 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 * Chinese:
 *: Mandarin: {{t|cmn|触摸|tr=chùmō|sc=Hans}}, {{t-|cmn|触|tr=chù|sc=Hans}}, {{t-|cmn|摸|tr=mō|sc=Hans}}
 * Czech: {{t|cs|cítit}}
-* Danish: {{t-|da|føle}},  {{t|da|mærke}}
-* French: {{t+|fr|palper}},  {{t+|fr|toucher}}
-* German: {{t+|de|fühlen}},  {{t+|de|spüren}}
+* Danish: {{t-|da|føle}}, {{t|da|mærke}}
+* French: {{t+|fr|palper}}, {{t+|fr|toucher}}
+* German: {{t+|de|fühlen}}, {{t+|de|spüren}}
 * Haitian Creole: {{tø|ht|santi}}
-* Hungarian: {{t+|hu|érez}},  {{t-|hu|tapint}}
+* Hungarian: {{t+|hu|érez}}, {{t-|hu|tapint}}
 {{trans-mid}}
 * Ido: {{t+|io|sentar|xs=Ido}}
 * Japanese: {{t-|ja|触れる|tr=ふれる, fureru}}
 * Old Church Slavonic: {{tø|cu|чѹти|tr=čuti|sc=Cyrs}}
 * Polish: {{t|pl|czuć}}
-* Portuguese: {{t|pt|apalpar}},  {{t+|pt|tocar}}
+* Portuguese: {{t|pt|apalpar}}, {{t+|pt|tocar}}
 * Romanian: {{t|ro|(a) simti}}
-* Russian: {{t|ru|трогать|tr=trógat'}},  {{t+|ru|чувствовать|tr=čúvstvovat'}}
+* Russian: {{t|ru|трогать|tr=trógat'}}, {{t+|ru|чувствовать|tr=čúvstvovat'}}
 * Spanish: {{t+|es|sentir}}
 * Turkish: {{t|tr|hissetmek}}
 * !Xóõ: [[ta̰ã]]
@@ -105,7 +105,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 * Danish: {{t-|da|føle}}
 * Esperanto: {{t|eo|senti}}
 * French: {{t+|fr|sentir}}
-* German: {{t+|de|fühlen}},  {{t+|de|spüren}}
+* German: {{t+|de|fühlen}}, {{t+|de|spüren}}
 * Hebrew: {{t|he|הרגיש|tr=Hirgish}}
 {{trans-mid}}
 * Hindi: {{t|hi|महसूस करना|tr=mahsūs karnā|sc=Deva}}
@@ -127,9 +127,9 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 *: Mandarin: {{t|zh|覺得|sc=Hani}}, {{t|zh|觉得|tr=juéde|sc=Hani}}, {{t|zh|感覺|sc=Hani}}, {{t|zh|感觉|tr=gǎnjué|sc=Hani}}
 * Czech: {{t|cs|cítit}}
 * French: {{t+|fr|sentir}}, {{t+|fr|penser}}
-* German: {{t+|de|fühlen}}, {{t+|de|denken}},  {{t|de|das Gefühl haben}}
+* German: {{t+|de|fühlen}}, {{t+|de|denken}}, {{t|de|das Gefühl haben}}
 {{trans-mid}}
-* Hungarian: {{t+|hu|érez}},  {{t|hu|az az érzése van}}
+* Hungarian: {{t+|hu|érez}}, {{t|hu|az az érzése van}}
 * Japanese: {{t+|ja|思う|tr=おもう, omou}}
 * Latin: {{t|la|sentio}}
 * Polish: {{t|pl|uważać}}, {{t|pl|mieć uczucie}}
@@ -176,7 +176,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 * German: [[fühlen]]
 * Greek: {{t+|el|νιώθω}}, {{t+|el|αισθάνομαι}}
 * Icelandic: {{t+|is|finna}}
-* Indonesian: [[rasa|merasa]], [[rasa|merasakan]], [[anggap|menganggap]], [[anggap|beranggap]],   [[anggap|beranggapan]] (touch)
+* Indonesian: [[rasa|merasa]], [[rasa|merasakan]], [[anggap|menganggap]], [[anggap|beranggap]], [[anggap|beranggapan]] (touch)
 * Italian: {{t+|it|sentire}}, {{t+|it|sentirsi}}
 * Japanese: [[感じる]] ([[かんじる]], kanjiru)
 {{trans-mid}}
@@ -256,7 +256,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 From {{etyl|enm}} {{term|feele|lang=enm}}, {{term|fele|lang=enm}}, {{term|feole|lang=enm}}, from {{etyl|ang}} {{term|fela|lang=ang}}, {{term|feala|lang=ang}}, {{term|feolo||much, many|lang=ang}}, from {{proto|Germanic|felu|very, much|lang=en}}, from {{proto|Indo-European|pélu-|many|lang=en}}. Cognate with {{etyl|sco|-}} {{term|fele||much, many, great|lang=sco}}, {{etyl|nl|-}} {{term|veel||much, many|lang=nl}}, {{etyl|de|-}} {{term|viel||much, many|lang=de}}, {{etyl|la|-}} {{term|plus|plūs|more|lang=la}}, {{etyl|grc|-}} {{term|πολύς||tr=polýs|many|lang=grc}}. Related to {{l|en|full}}.
 
 ====Pronoun====
-{{en-pronoun}}
+{{en-pron}}
 
 # {{alternative form of|fele}}
 
