/* Readings */ Fixing readings <星#16917761>

--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -35,9 +35,11 @@ Or, 晶 is the sound. (?)
 
 ====Readings====
 * {{ja-readings
-|on=[[せい]] (sei), [[しょう]] (shō)
+|goon=[[しょう]] (shō), {{qualifier|historical}} [[しゃう]] (shau)
+|kanon=[[せい]] (sei)
 |kun=[[ほし]] (hoshi)
-|nanori=[[ほし]] (Hoshi)}}
+|nanori=[[ほし]] (Hoshi)
+}}
 
 ====Compounds====
 {{der-top|Compounds}}
