--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -25,7 +25,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 #* '''2010''', Bill Geiger, "6-pack Abs in 9 Weeks", ''Reps!'' '''17''':106
 #*: That's the premise of the overload principle, and it must be applied, even to ab training, if you're going to develop a '''cut''', ripped midsection.
 # {{informal}} [[circumcised|Circumcised]].
-# {{Australia|slang}} Emotionally [[hurt]].
+# {{Australia|NZ|slang}} Emotionally [[hurt]].
 # Eliminated from consideration during a recruitment drive.
 # Removed from a team roster.
 
