--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -82,6 +82,7 @@ From {{etyl|enm}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{term|c
 
 =====Translations=====
 {{trans-top|amount of money, time, etc.}}
+* Asturian: {{t|ast|costu|m}}
 * Basque: {{t-|eu|kostu|xs=Basque}}
 * Bulgarian: {{t+|bg|цена|f}}
 * Catalan: {{t+|ca|preu|m}}, {{t|ca|cost|m}}
@@ -91,13 +92,14 @@ From {{etyl|enm}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{term|c
 * Dutch: {{t+|nl|kost}}
 * Finnish: {{t+|fi|hinta}}, {{t+|fi|kustannus}}
 * French: {{t|fr|coût|m}}, {{t|fr|frais|m}}
+* Galician: {{t|gl|custo|m}}
 * {{trreq|Georgian}}
 * German: {{t+|de|Kosten|f|p}}
 * Greek: {{t+|el|κόστος|n|tr=kóstos}}, {{t+|el|δαπάνη|f|tr=dapáni}}, {{t+|el|τίμημα|n|tr=tímima}}, {{t+|el|αντίτιμο|n|tr=antítimo}}
 * Hebrew: {{t|he|עלות|tr='alut|f}}
 * Hungarian: {{t|hu|ár}}
-* Italian: {{t+|it|costo|m}}, {{t+|it|spesa|f}}
 {{trans-mid}}
+* Italian: {{t+|it|costo|m}}, {{t+|it|spesa|f}}
 * Japanese: {{t+|ja|費用|tr=[[ひよう]], hiyō}}
 * Kurdish:
 *: Sorani: {{t|ku|به‌ها}}, {{t|ku|نرخ}}
@@ -115,16 +117,18 @@ From {{etyl|enm}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{term|c
 {{trans-bottom}}
 
 {{trans-top|negative consequence or loss}}
+* Asturian: {{t|ast|costu|m}}
 * Basque: {{t-|eu|kostu|xs=Basque}}
 * Bulgarian: {{t|bg|загуби|p}}
 * Chinese: {{t|cmn|代價}} {{t|cmn|代价|tr=dàijìa}}
 * Czech: {{t+|cs|cena|f}}
 * Finnish: {{t+|fi|hinta}}
 * French: {{t|fr|coût|m}}
+* Galician: {{t|gl|custo|m}}
 * German: {{t+|de|Verlust|m}}, {{t+|de|Ausgaben|f}}
 * Greek: {{t+|el|κόστος|n|tr=kóstos}}
-* Japanese: {{t|ja|代償|tr=[[だいしょう]], daishō}}
 {{trans-mid}}
+* Japanese: {{t|ja|代償|tr=[[だいしょう]], daishō}}
 * Latvian: {{t|lv|maksa|f}}
 * Novial: [[kosto]]
 * Polish: {{t+|pl|cena|f}}
@@ -166,6 +170,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 =====Translations=====
 {{trans-top|to incur a charge, a price}}
 * Arabic: {{t|ar|ساوى|tr=saawaa}}
+* Asturian: {{t|ast|costar}}
 * Basque: {{t|eu|kostatu|xs=Basque}}
 * Bulgarian: {{t|bg|струвам}}
 * Catalan: {{t|ca|costar}}
@@ -175,6 +180,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Esperanto: {{t-|eo|kosti|xs=Esperanto}}
 * Finnish: {{t+|fi|maksaa}}
 * French: {{t+|fr|coûter}}
+* Galician: {{t|gl|custar}}
 * {{trreq|Georgian}}
 * German: {{t+|de|kosten}}
 * Greek: [[κοστίζω]] [ko̞ˈstizo̞] (means also "to cause damage or distress"), [[στοιχίζω]] [stiˈçizo̞] (means also "to inflict" and "to align"), [[τιμώμαι]] [tiˈmo̞me̞], [[κάνω]] [ˈkano̞] [colloquial (has a huge number of meanings, one of them is "to cost")]
