--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -137,7 +137,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * Scottish Gaelic: [[feòil]] {{f}}
 * Swahili: {{t+|sw|ngozi|xs=Swahili}}
 * Telugu: [[గుజ్జు]] (gujju)
-* Volapük: {{t|vo|flukapulp}}
+* Volapük: {{t|vo|flukapulp}}, {{t|vo|pulp}}
 {{trans-bottom}}
 
 {{trans-top|colour}}
