tgloss:"country" ([[WT:EDIT|Assisted]]) <Germany#16951729>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -22,7 +22,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 #*: While the Germans of Gaul, Italy, and Spain became Romans, the Saxons retained their language, their genius, and manners, and created in Britain a '''Germany''' outside of '''Germany'''.
 
 ====Translations====
-{{trans-top|Germany}}
+{{trans-top|country}}
 * [[Acehnese]]: {{tø|ace|Jeureuman}}
 * [[Afrikaans]]: {{t|af|Duitsland}}
 * Albanian: {{t|sq|Gjermania}}
