--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -340,6 +340,8 @@
 * Italian: {{t+|it|suonare}}
 {{trans-mid}}
 * Japanese: {{t|ja|演奏する|tr=えんそうする, ensō-suru|sc=Jpan}}, {{t|ja|奏でる|tr=かなでる, kanaderu|sc=Jpan}} {{qualifier|string instruments including piano}} {{t|ja|弾く|tr=ひく, hiku|sc=Jpan}}, {{qualifier|wind instruments}} {{t|ja|吹く|tr=ふく, fuku|sc=Jpan}}, {{qualifier|drums}} {{t|ja|叩く|tr=たたく, tataku|sc=Jpan}}
+* Latgalian: {{tø|ltg|spieļuot}}
+* Latvian: {{t|lv|spēlēt}}
 * Lojban: {{t|jbo|zgipli}}
 * Macedonian: {{t|mk|свири|tr=svíri}}
 * Old English: {{t-|ang|lacan|alt=lācan|xs=Old English}}
