--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -46,15 +46,14 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[American Sign Language]]: [[F@NearForehead-HandPalmDown F@NearForehead-HandPalmUp HorizSmallTwist]]
 * Arabic: {{t+|ar|فرنسا|f|tr=faránsa}}, {{qualifier|archaic}} {{t|ar|بلاد الإفرنج|f|p|tr=blad alʔifranj|sc=Arab}}, {{qualifier|archaic}} {{t|ar|بلاد الفرنجة|f|p|tr=bilad alfirinja|sc=Arab}}
 *: [[Egyptian Arabic]]: {{tø|arz|فرنسا|f|tr= faransa|sc=Arab}}
-* [[Aragonese]]: [[Franzia]] {{f}}
+* [[Aragonese]]: {{t|an|Franzia|f}}
 * Armenian: {{t+|hy|Ֆրանսիա|tr=Fransia}}
-* [[Asturian]]: [[Francia]] {{f}}
+* [[Asturian]]: {{t|ast|Francia|f}}
 * [[Azeri]]: {{t|az|Fransa}}
-* [[Basque]]: [[Frantzia]]
+* [[Basque]]: {{t|eu|Frantzia}}
 * Belarusian: {{t|be|Францыя|f|tr=Fráncyja|xs=Belarusian}}
 * Bengali: {{t|bn|ফ্রান্স|tr=phrans|sc=Beng}}
-* Bosnian: {{t-|bs|Francuska|f}}
-* [[Breton]]: [[Frañs]] ''(state)'', [[Bro-C'hall]] ''(country)''
+* [[Breton]]: {{t|br|Frañs}} {{qualifier|state}}, {{t|br|Bro-C'hall}} {{qualifier|country}}
 * Bulgarian: {{t+|bg|Франция|f|tr=Fráncija}}
 * Burmese: {{t|my|ပြင်သစ်နိုင်ငံ|tr=pyin-thiq nain-gan|sc=Mymr|xs=Burmese}}
 * [[Catalan]]: {{t+|ca|França|f}}
@@ -64,32 +63,31 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 *: Mandarin: {{t-|cmn|法國|sc=Hani}}, {{t-|cmn|法国|tr=Fǎguó|sc=Hani}}, {{t|cmn|法蘭西|sc=Hani}}, {{t|cmn|法兰西|tr=Fǎlánxī|sc=Hani}}
 *: [[Min Nan]]: {{tø|nan|法國|tr=Hoat-kok}}
 *: Teochew: Huag8gog4
-* [[Cornish]]: [[Pow Frynk]]
-* [[Corsican]]: [[Francia]] {{f}}
+* [[Cornish]]: {{t|kw|Pow Frynk}}
+* [[Corsican]]: {{t|co|Francia|f}}
 * [[Crimean Tatar]]: {{tø|crh|Frenkistan}}
-* Croatian: {{t+|hr|Francuska|f}}
 * Czech: {{t+|cs|Francie}}
 * Danish: {{t+|da|Frankrig}}
-* [[Dhivehi]]: [[ފަރަންސޭސިވިލާތް]] (Faranseysi Vilath)
+* [[Dhivehi]]: {{t|dv|ފަރަންސޭސިވިލާތް|tr=Faranseysi Vilath}}
 * Dutch: {{t+|nl|Frankrijk|n}}
 * Esperanto: {{t+|eo|Francio|xs=Esperanto}}, {{t+|eo|Francujo|xs=Esperanto}}
 * Estonian: {{t+|et|Prantsusmaa}}
 * Faroese: {{t-|fo|Frakland|xs=Faroese}}
 * Finnish: {{t+|fi|Ranska}}
 * French: {{t+|fr|France|f}}
-* [[Galician]]: [[Francia]] {{f}}
+* [[Galician]]: {{t|gl|Francia|f}}
 * Georgian: {{t-|ka|საფრანგეთი|tr=sap‘ranget‘i|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Frankreich|n}}
 * Greek: {{t+|el|Γαλλία|f|tr=Gallía}}
 * [[Gujarati]]: {{t|gu|ફ્રાન્સ|tr=phrāns|sc=Gujr}}
-* [[Haitian Creole]]: [[Frans]]
+* [[Haitian Creole]]: {{t|ht|Frans}}
 * Hebrew: {{t+|he|צרפת|f|alt=צָרְפַת|tr=tsarfát}} (''classical:'' Ṣārəphath)
 * Hindi: {{t|hi|फ़्रांस|tr=frāns|xs=Hindi}}, {{t|hi|फ़्राँस|tr=frāns|xs=Hindi}}, {{t|hi|फ़्रान्स|m|tr=frāns|sc=Deva}}, {{t|hi|फ्रांस|tr=phrāns|sc=Deva}}
 * Hungarian: {{t+|hu|Franciaország}}
 * Icelandic: {{t+|is|Frakkland|n}}
 * [[Ido]]: [[Francia]]
 * Indonesian: {{t+|id|Perancis|xs=Indonesian}}, {{t+|id|Prancis|xs=Indonesian}}
-* [[Interlingua]]: [[Francia]]
+* [[Interlingua]]: {{t|ia|Francia}}
 * Irish: An [[Frainc|Fhrainc]] {{f}}
 * Italian: {{t+|it|Francia|f}}
 * Japanese: {{t+|ja|フランス|tr=Furánsu}}, {{t-|ja|仏蘭西|tr=Furánsu}} {{qualifier|obsolete}}
@@ -107,9 +105,9 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 {{trans-mid}}
 * Latin: {{t+|la|Gallia|f}}, {{t+|la|Francia}}
 * Latvian: {{t+|lv|Francija|f|xs=Latvian}}
-* [[Limburgish]]: [[Frankriek]]
+* [[Limburgish]]: {{t|li|Frankriek}}
 * Lithuanian: {{t+|lt|Prancūzija|xs=Lithuanian}}
-* [[Livonian]]: [[Prantsūzmō]]
+* [[Livonian]]: {{t|liv|Prantsūzmō}}
 * [[Lojban]]: {{t|jbo|fasygu'e}}
 * [[Low Saxon]]: [[Frankriek]]
 * [[Luhya]]: {{tø|luy|Frans}}
@@ -127,30 +125,30 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Navajo: {{tø|nv|Dáághahii Dinéʼiʼ bikéyah}}
 * [[Neapolitan]]: {{tø|nap|Franza|f}}
 * Norwegian: {{t+|no|Frankrike}} (Franske Republikk, Republikken Frankrike)
-* [[Novial]]: [[Fransia]]
-* [[Occitan]]: [[França]]
-* [[Old English]]: [[Francland]]
-* [[Ossetian]]: [[Франц]] (Frants)
+* [[Novial]]: {{t|nov|Fransia}}
+* [[Occitan]]: {{t|oc|França|f}}
+* [[Old English]]: {{t|ang|Francland}}
+* [[Ossetian]]: {{t|os|Франц|tr=Frants}}
 * [[Pashto]]: {{t|ps|فرانسه|sc=ps-Arab}}
 * Persian: {{t+|fa|فرانسه|tr=Frânse|xs=Persian}}
 * Polish: {{t+|pl|Francja|f}}
 * Portuguese: {{t+|pt|França|f}}
 * Romanian: {{t+|ro|Franța|f}}
-* [[Romansch]]: [[Frantscha]]
+* [[Romansch]]: {{t|rm|Frantscha}}
 * Russian: {{t+|ru|Франция|f|tr=Fráncija}}
 * Sanskrit: {{t|sa|फ्रांस|tr=phrānsa|xs=Sanskrit}}
-* [[Sardinian]]: [[Frantza]]
-* [[Scots]]: [[Franse]]
+* [[Sardinian]]: {{t|sc|Frantza}}
+* [[Scots]]: {{t|sco|Franse}}
 * [[Scottish Gaelic]]: An [[Fraing|Fhraing]]
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Француска|f|sc=Cyrl}}
 *: Roman: {{t|sh|Francuska|f}}
-* [[Sicilian]]: [[Francia]] {{f}}
+* [[Sicilian]]: {{t|scn|Francia|f}}
 * [[Silesian]]: {{tø|szl|Francyjo|f}}
 * [[Sinhalese]]: {{t|si|ප්‍රංශය|tr=praṁśaya|sc=Sinh}}
 * Slovak: {{t|sk|Francúzsko|n}}
 * Slovene: {{t+|sl|Francija|f}}
-* [[Sotho]]: France
+* [[Sotho]]: {{t|st|France}}
 * Spanish: {{t+|es|Francia|f}}
 * Swahili: {{t+|sw|Ufaransa|xs=Swahili}}
 * Swedish: {{t+|sv|Frankrike}}
@@ -159,7 +157,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Tamil]]: {{t|ta|பிரான்ஸ்|tr=pirāns|xs=Tamil}}
 * [[Telugu]]: {{t|te|ఫ్రాన్స్|sc=Telu}}
 * Thai: {{t+|th|ฝรั่งเศส|tr=fàràngsèt}}
-* [[Tok Pisin]]: [[Pranis]]
+* [[Tok Pisin]]: {{t|tpi|Pranis}}
 * Turkish: {{t+|tr|Fransa}}
 * [[Turkmen]]: {{t|tk|Fransiýa}}
 * Ukrainian: {{t+|uk|Франція|f|tr=Fráncija|xs=Ukrainian}}
@@ -168,7 +166,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Volapük]]: {{t|vo|Fransän}}, {{qualifier|obsolete}} {{t|vo|Flent}}, {{qualifier|obsolete}} {{t|vo|Flentän}}
 * [[Võro]]: [[Prantsusmaa]]
 * Welsh: {{t+|cy|Ffrainc|f|xs=Welsh}}
-* [[West Frisian]]: [[Frankryk]]
+* [[West Frisian]]: {{t|fy|Frankryk}}
 * Yiddish: {{t-|yi|פראנקרײך|n|alt=פֿראַנקרײַך|tr=Frankraykh, Frankrajch|sc=Hebr|xs=Yiddish}}
 {{trans-bottom}}
 
@@ -182,8 +180,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 ===Statistics===
 * {{rank|mine|wild|front|576|France|London|save|length}}
 
-[[Category:en:Countries]]
-[[Category:en:France| ]]
+[[Category:en:France]]
 
 ----
 
@@ -213,7 +210,7 @@ From {{etyl|fro|fr}} {{term|France|lang=fro}}, from {{etyl|LL.|fr}} {{term|Franc
 * [[Céfran#French|Céfran]]
 
 [[Category:fr:Countries]]
-[[Category:fr:France| ]]
+[[Category:fr:France]]
 
 ----
 
@@ -222,7 +219,7 @@ From {{etyl|fro|fr}} {{term|France|lang=fro}}, from {{etyl|LL.|fr}} {{term|Franc
 ===Proper noun===
 {{head|frm|proper noun|g=f}}
 
-# [[#English|France]] {{gloss|country of the Europe}}
+# {{l|en|France}} {{gloss|country of the Europe}}
 
 [[Category:frm:Countries]]
 
