t+ka:[[ნავსადგური]] t-balance ([[WT:EDIT|Assisted]]) <port#16962331>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -48,7 +48,7 @@
 * Estonian: {{t-|et|sadam}}
 * Finnish: {{t+|fi|satama}}
 * French: {{t+|fr|port|m}}
-* Georgian: {{t|ka|პორტი|tr=porti|sc=Geor}}
+* Georgian: {{t|ka|პორტი|tr=porti|sc=Geor}}, {{t|ka|ნავსადგური|tr=navsadguri|sc=Geor}}
 * German: {{t+|de|Hafen|m}}
 * Greek: {{t+|el|λιμάνι|n|tr=limáni}}, {{t+|el|λιμένας|m|tr=liménas}}
 * Hebrew: {{t|he|נמל|m|tr=namál|sc=Hebr}}
@@ -59,8 +59,8 @@
 * Indonesian: {{t-|id|pelabuhan|xs=Indonesian}}
 * Italian: {{t+|it|porto|m}}
 * Japanese: {{t|ja|港|tr=[[みなと]], minato|sc=Jpan}}
-* Kazakh: {{t|kk|кемежай|tr=kemejay|sc=Cyrl}}
 {{trans-mid}}
+* Kazakh: {{t|kk|кемежай|tr=kemejay|sc=Cyrl}}
 * Korean: {{t|ko|항구|tr=hanggu|sc=Kore}} ({{t|ko|港口|sc=Kore}})
 * Latgalian: {{tø|ltg|ūsta|f}}
 * Latvian: {{t|lv|osta|f}}
