--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -272,6 +272,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Urdu: {{t|ur|گھی|tr=ghī|sc=ur-Arab}}, {{t|ur|مکھن|tr=makkhan|sc=ur-Arab}}
 * Uzbek: {{t|uz|sariеg`}}
 * Vietnamese: {{t+|vi|bơ|xs=Vietnamese}}
+* Volapük: {{t|vo|bör}}, {{qualifier|older term}} {{t|vo|mileg}}
 * West Frisian: {{t-|fy|bûter|c|xs=West Frisian}}
 * Yiddish: {{t|yi|פּוטער|f|tr=puter|sc=Hebr}}
 {{trans-bottom}}
