--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia|dab=pull}}
 
 ===Etymology===
-From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to pull, tug, pluck|lang=ang}}. Related to {{etyl|nds|-}} {{term|pulen||to pick, pluck, pull, tear|lang=nds}}, {{etyl|dum|-}} {{term|pullen||to drink|lang=dum}}, {{etyl|non|-}} {{term|púla|pūla|to beat|lang=non}}.
+From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to pull, draw, tug, pluck off|lang=ang}}. Related to {{etyl|dum|-}} {{term|pullen||to drink|lang=dum}}, {{etyl|nds|-}} {{term|pulen||to pick, pluck, pull, tear|lang=nds}}, {{etyl|non|-}} {{term|púla||to work hard, beat|lang=non}}.
 
 ===Pronunciation===
 * {{enPR|po͝ol}}, {{IPA|/pʊl/}}, {{X-SAMPA|/pUl/}}
