/* Verb */ fi translations <bridge#16982238>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -331,9 +331,15 @@ From {{etyl|ang|en}} {{term|brycgian|brycġian|lang=ang}}.
 
 =====Translations=====
 {{trans-top|to span as if with a bridge}}
-* Hungarian: {{t|hu|áthidal}}
-* Swedish: {{t+|sv|överbrygga}}
+* Finnish: [[rakentaa#Finnish|rakentaa]] [[silta#Finnish|silta]] [[jonkin#Finnish|jonkin]] {{t|fi|yli}}
 {{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|to span as if with a bridge}}
+* Finnish: {{t|fi|sovitella}}
+* Hungarian: {{t|hu|áthidal}}
+{{trans-mid}}
+* Swedish: {{t+|sv|överbrygga}}
 * Tongan: {{t|to|hala fakakavakava}}
 {{trans-bottom}}
 
