--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -331,6 +331,7 @@ From {{etyl|ang|en}} {{term|brycgian|brycġian|lang=ang}}.
 # {{music}} To [[transition]] from one piece or section of music to another without stopping.
 #: ''We need to bridge that [[jam]] into "The Eleven".''
 # {{computing|communication}} To [[connect]] two or more computer buses, networks etc. with a bridge.
+# {{wrestling}} to go to the bridge position.
 
 =====Translations=====
 {{trans-top|to make a bridge}}
@@ -351,6 +352,11 @@ From {{etyl|ang|en}} {{term|brycgian|brycġian|lang=ang}}.
 {{trans-bottom}}
 
 {{trans-top|computing, communication: to connect with a bridge}}
+* Finnish: {{t|fi|sillata}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|wrestling: to go to the bridge position}}
 * Finnish: {{t|fi|sillata}}
 {{trans-mid}}
 {{trans-bottom}}
