--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -39,7 +39,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 # {{billiards|snooker|pool}} A cue modified with a convex arch-shaped notched head attached to the narrow end, used to support a player's (shooter's) cue for extended or tedious shots. Also called a [[spider]].
 # {{diplomacy}} A statement, such as an [[offer]], that signals a possibility of accord.
 # {{graph theory}} An [[edge]] which, if [[remove]]d, changes a [[connected graph]] to one that is not connected.
-# {{wrestling}} A defensive [[position]] in which the [[wrestler]] is supported by his feet and head, belly-up, in order to prevent touch-down of the shoulders.
+# {{wrestling}} A defensive [[position]] in which the [[wrestler]] is supported by his feet and head, belly-up, in order to prevent touch-down of the shoulders and eventually to [[dislodge]] an opponent who has established a position on top.
 
 =====Derived terms=====
 {{rel-top|Terms derived from ''bridge'' (etymology 1)}}
