--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -291,9 +291,9 @@ From {{etyl|enm}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}} {{term|brycgia
 # To [[span]] as if with a bridge.
 #: ''The two groups were able to '''bridge''' their differences.''
 # {{music}} To [[transition]] from one piece or section of music to another without stopping.
-#: ''We need to bridge that [[jam]] into "The Eleven".''
+#: ''We need to '''bridge''' that [[jam]] into "The Eleven".''
 # {{computing|communication}} To [[connect]] two or more computer buses, networks etc. with a bridge.
-# {{wrestling}} to go to the bridge position.
+# {{wrestling}} To go to the bridge position.
 
 =====Translations=====
 {{trans-top|to make a bridge}}
