--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -9,7 +9,8 @@
 * {{rhymes|ɪdʒ}}
 
 ===Etymology 1===
-From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg||bridge|lang=ang}}, from {{proto|Germanic|brugjōn|lang=en}} (cf. West Frisian {{term|brêge|lang=fy}}, Dutch {{term|brug|lang=nl}}, German {{term|Brücke|lang=de}}), from {{proto|Indo-European|bhrēuā}} (cf. Gaulish {{term||bríva}} ‘bridge’, Old Church Slavonic {{term||brŭvŭno}} ‘beam’, {{term||brivno}} ‘log’).
+From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|brycġ|bridge|lang=ang}}, from {{proto|Germanic|brugjō||brugjōn|bridge|lang=en}}, from {{proto|Indo-European|bʰerw-||bʰrēw-|wooden flooring, decking, bridge
+|lang=en}}. Cognate with {{etyl|sco|-}} {{term|brig|lang=sco}}, {{term|brigg|lang=sco}}, {{term|breeg||bridge|lang=sco}}, {{etyl|frs|-}} {{term|bregge||bridge|lang=frs}}, West Frisian {{term|brêge||bridge|lang=fy}}, Dutch {{term|brug||bridge|lang=nl}}, German {{term|Brücke||bridge|lang=de}}, {{etyl|da|-}} {{term|bro||bridge|lang=da}} & {{term|brygge||wharf|lang=da}}, {{etyl|is|-}} {{term|brú||bridge|lang=is}} & {{term|brygga||pier|lang=is}}, Gaulish {{term||bríva|bridge}}, Old Church Slavonic {{term||brŭvŭno|beam}} & {{term||brivno|log}}.
 
 ====Noun====
 [[Image:48 - Mende - Pont Notre-Dame.jpg|thumb|A bridge (sense 1)]][[Image:Violin_bridge.jpg|thumb|right|The bridge of a violin]]
